--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5456,7 +5456,6 @@ payload:
   - '+.765q.com'
   - '+.766.com'
   - '+.7663.com'
-  - '+.76676.com'
   - '+.766z.com'
   - '+.7676.com'
   - '+.767stock.com'
@@ -10173,6 +10172,7 @@ payload:
   - '+.beimai.com'
   - '+.beimeigoufang.com'
   - '+.beimeihongfeng.com'
+  - '+.beimiyouchuan.com'
   - '+.beimu.com'
   - '+.beingmate.com'
   - '+.beipy.com'
@@ -16030,7 +16030,6 @@ payload:
   - '+.cpu114.com'
   - '+.cpu668.com'
   - '+.cpubbs.com'
-  - '+.cpupack.com'
   - '+.cpvjob.com'
   - '+.cpython.org'
   - '+.cpzjzx.com'
@@ -31355,6 +31354,7 @@ payload:
   - '+.jingtuitui.com'
   - '+.jingtum.com'
   - '+.jingua168.com'
+  - '+.jinguanauto.com'
   - '+.jingujie.com'
   - '+.jingutrust.com'
   - '+.jingwacenter.com'
@@ -34595,7 +34595,6 @@ payload:
   - '+.laomaotao.net'
   - '+.laomaotao.org'
   - '+.laomaotaopan.com'
-  - '+.laomudong.cc'
   - '+.laonanren.cc'
   - '+.laoniushuju.com'
   - '+.laoqiange.club'
@@ -39099,7 +39098,6 @@ payload:
   - '+.muniao.com'
   - '+.mupao.com'
   - '+.mupceet.com'
-  - '+.mupmstx.com'
   - '+.murdermysterypa.com'
   - '+.murl.tv'
   - '+.murphysec.com'
@@ -44608,7 +44606,6 @@ payload:
   - '+.rayoptek.com'
   - '+.rayps.com'
   - '+.rayrjx.com'
-  - '+.raysd.com'
   - '+.raysilicon.com'
   - '+.raythonsoft.com'
   - '+.raytoon.net'
@@ -45425,6 +45422,7 @@ payload:
   - '+.rv2go.com'
   - '+.rvcore.com'
   - '+.rvfdp.com'
+  - '+.rvkol.com'
   - '+.rvmcu.com'
   - '+.rwtext.com'
   - '+.rwxqfbj.com'
@@ -48636,7 +48634,6 @@ payload:
   - '+.sportnanoapi.com'
   - '+.sportq.com'
   - '+.sports-idea.com'
-  - '+.sports8.cc'
   - '+.sports8.net'
   - '+.sportsdt.com'
   - '+.sposter.net'
@@ -49906,7 +49903,6 @@ payload:
   - '+.t1networks.com'
   - '+.t1y4.com'
   - '+.t20000.com'
-  - '+.t262.com'
   - '+.t2cn.com'
   - '+.t3315.com'
   - '+.t4lover.com'
@@ -56523,11 +56519,11 @@ payload:
   - '+.x315.com'
   - '+.x3322.net'
   - '+.x3366.com'
+  - '+.x33699.com'
   - '+.x3china.com'
   - '+.x3cn.com'
   - '+.x431.com'
   - '+.x5dj.com'
-  - '+.x5yue.com'
   - '+.x64go.com'
   - '+.x64pro.com'
   - '+.x6d.com'
@@ -61470,7 +61466,6 @@ payload:
   - '+.yunpan.com'
   - '+.yunpansou.cc'
   - '+.yunpanx.com'
-  - '+.yunpanziyuan.com'
   - '+.yunpei.com'
   - '+.yunpian.com'
   - '+.yunpiao.net'
