--- a/directbak.yaml
+++ b/directbak.yaml
@@ -57,7 +57,6 @@ payload:
   - '+.00wv.com'
   - '+.01-123.com'
   - '+.01-cf.com'
-  - '+.010110.org'
   - '+.010123456.com'
   - '+.010155.net'
   - '+.0101shop.com'
@@ -236,7 +235,6 @@ payload:
   - '+.02wq.com'
   - '+.030303.com'
   - '+.030mall.com'
-  - '+.0310cn.com'
   - '+.0310it.com'
   - '+.0311wifi.com'
   - '+.0314.online'
@@ -1091,6 +1089,7 @@ payload:
   - '+.1322.com'
   - '+.132lawyer.com'
   - '+.1332vp.com'
+  - '+.133335.xyz'
   - '+.13377608388.com'
   - '+.133998.com'
   - '+.133china.com'
@@ -1680,7 +1679,6 @@ payload:
   - '+.199u2.com'
   - '+.199yt.com'
   - '+.199zw.com'
-  - '+.19airen.com'
   - '+.19bizhi.com'
   - '+.19call.com'
   - '+.19call.net'
@@ -4352,7 +4350,6 @@ payload:
   - '+.52z.com'
   - '+.52zhaopin.com'
   - '+.52zhizuo.com'
-  - '+.52zhushan.com'
   - '+.52zixue.com'
   - '+.52zjkj.com'
   - '+.52zuji.net'
@@ -4834,7 +4831,6 @@ payload:
   - '+.5l5qny.com'
   - '+.5lanren.com'
   - '+.5lbw.com'
-  - '+.5lejob.com'
   - '+.5lux.com'
   - '+.5m5m5m.com'
   - '+.5m68.com'
@@ -4926,7 +4922,6 @@ payload:
   - '+.608082.com'
   - '+.6080d.com'
   - '+.6080j.com'
-  - '+.6090b.com'
   - '+.609999.xyz'
   - '+.60dj.com'
   - '+.60eee.net'
@@ -5450,7 +5445,6 @@ payload:
   - '+.761a.com'
   - '+.762rc.com'
   - '+.7654.com'
-  - '+.76551.uk'
   - '+.7659.com'
   - '+.765i.com'
   - '+.765q.com'
@@ -5717,6 +5711,7 @@ payload:
   - '+.8006tu.com'
   - '+.800820.net'
   - '+.8008202191.com'
+  - '+.8008205555.com'
   - '+.800app.com'
   - '+.800bamboo.com'
   - '+.800best.com'
@@ -5804,7 +5799,6 @@ payload:
   - '+.81kx.com'
   - '+.81pan.com'
   - '+.81tech.com'
-  - '+.81toutiao.com'
   - '+.81tt.net'
   - '+.81xy.com'
   - '+.81xz.com'
@@ -7200,7 +7194,6 @@ payload:
   - '+.acrel-znyf.com'
   - '+.across-mbox.com'
   - '+.acrpc.com'
-  - '+.acshoes.com'
   - '+.acsrq.com'
   - '+.act-telecom.com'
   - '+.actacams.com'
@@ -9057,6 +9050,7 @@ payload:
   - '+.atmlimited.com'
   - '+.atmob.com'
   - '+.atobo.com'
+  - '+.atomhike-en.com'
   - '+.atomhike.com'
   - '+.atomic-art.com'
   - '+.atomy.tech'
@@ -9293,7 +9287,6 @@ payload:
   - '+.b-eurochina.com'
   - '+.b-fairy.com'
   - '+.b1446.com'
-  - '+.b178.com'
   - '+.b1bj.com'
   - '+.b1qg.com'
   - '+.b23.tv'
@@ -9758,7 +9751,6 @@ payload:
   - '+.baogaoting.com'
   - '+.baogaozhiku.com'
   - '+.baoge.net'
-  - '+.baoguangsi.org'
   - '+.baoguangtai.com'
   - '+.baohebao.com'
   - '+.baohuagroup.com'
@@ -11699,7 +11691,6 @@ payload:
   - '+.bullmind.com'
   - '+.buluanmai.com'
   - '+.buluo007.com'
-  - '+.bumaolong.com'
   - '+.bumimi.com'
   - '+.bumiu.com'
   - '+.bundpic.com'
@@ -11793,7 +11784,6 @@ payload:
   - '+.bxgtd.com'
   - '+.bxhaibao.com'
   - '+.bxiangui.com'
-  - '+.bxj8999.com'
   - '+.bxjob.net'
   - '+.bxkejian.com'
   - '+.bxkxw.com'
@@ -14369,6 +14359,7 @@ payload:
   - '+.chongyitang.org'
   - '+.chonka.com'
   - '+.chotee.com'
+  - '+.chouchou.club'
   - '+.chouchoujiang.com'
   - '+.choujue.net'
   - '+.choukang.com'
@@ -14723,7 +14714,6 @@ payload:
   - '+.ciwork.net'
   - '+.cixibank.com'
   - '+.cixiedu.net'
-  - '+.cixircw.com'
   - '+.ciyew.com'
   - '+.ciyocon.com'
   - '+.ciyuan.men'
@@ -16855,7 +16845,6 @@ payload:
   - '+.d.cg'
   - '+.d.design'
   - '+.d03jd.com'
-  - '+.d1222.com'
   - '+.d163.net'
   - '+.d17.cc'
   - '+.d1999.com'
@@ -19087,7 +19076,6 @@ payload:
   - '+.dubaike.com'
   - '+.dubairen.com'
   - '+.dubbo.io'
-  - '+.dubiwang.com'
   - '+.dubprince.com'
   - '+.dubyc.com'
   - '+.dudong.com'
@@ -20131,7 +20119,6 @@ payload:
   - '+.ejeegroup.com'
   - '+.ejfeng.com'
   - '+.ejiacn.com'
-  - '+.ejianji.com'
   - '+.ejianmedia.com'
   - '+.ejiayu.com'
   - '+.ejie.me'
@@ -20160,7 +20147,6 @@ payload:
   - '+.ekaoyan.com'
   - '+.ekaoyan365.com'
   - '+.ekclubinternational.com'
-  - '+.eketong.com'
   - '+.ekuaibao.com'
   - '+.ekwangs.com'
   - '+.ekweixin.com'
@@ -24034,6 +24020,7 @@ payload:
   - '+.gstarcad.com'
   - '+.gstdt.com'
   - '+.gstonegames.com'
+  - '+.gsuus.com'
   - '+.gsxb.net'
   - '+.gsxcdn.com'
   - '+.gsxservice.com'
@@ -24604,7 +24591,6 @@ payload:
   - '+.gzfc.net'
   - '+.gzfilm.com'
   - '+.gzfsnet.com'
-  - '+.gzfuqing.com'
   - '+.gzgc120.com'
   - '+.gzgdwl.com'
   - '+.gzgxkj.com'
@@ -25026,6 +25012,7 @@ payload:
   - '+.halfrost.com'
   - '+.haligenjudi.com'
   - '+.halixun.com'
+  - '+.haliyy.com'
   - '+.halloar.com'
   - '+.hallofix.com'
   - '+.halobear.com'
@@ -25424,7 +25411,6 @@ payload:
   - '+.harlanc.vip'
   - '+.harmay.com'
   - '+.harmight.com'
-  - '+.harmony-impex.com'
   - '+.harmony3.com'
   - '+.harmony4s.com'
   - '+.harmonyos.com'
@@ -26550,6 +26536,7 @@ payload:
   - '+.hlmbbs.com'
   - '+.hlmseo.com'
   - '+.hlnmg.com'
+  - '+.hloli.org'
   - '+.hloong.com'
   - '+.hlpretty.net'
   - '+.hlqiaojia.com'
@@ -26645,7 +26632,6 @@ payload:
   - '+.hnhaofang.com'
   - '+.hnhflqgc.com'
   - '+.hnhnled.com'
-  - '+.hnhsj.com'
   - '+.hnhxin.com'
   - '+.hnhxxk.com'
   - '+.hniec.org'
@@ -29299,7 +29285,6 @@ payload:
   - '+.imalljoy.com'
   - '+.imandarin.net'
   - '+.imangodoc.com'
-  - '+.imanhuaw.com'
   - '+.imanhuaw.net'
   - '+.imaojiang.com'
   - '+.imarketchina.com'
@@ -29766,6 +29751,7 @@ payload:
   - '+.ipengchen.com'
   - '+.ipengtai.com'
   - '+.iper2.com'
+  - '+.iperson.xyz'
   - '+.ipexp.com'
   - '+.ipfeibiao.com'
   - '+.ipfen.com'
@@ -31697,7 +31683,6 @@ payload:
   - '+.jj55.com'
   - '+.jj59.com'
   - '+.jj831.com'
-  - '+.jjapk.com'
   - '+.jjb-static.com'
   - '+.jjbang.com'
   - '+.jjbank.net'
@@ -31792,7 +31777,6 @@ payload:
   - '+.jkfwvip.com'
   - '+.jkhapp.com'
   - '+.jkhealth.vip'
-  - '+.jkickz.com'
   - '+.jkimg.net'
   - '+.jkjzt.com'
   - '+.jkpan.cc'
@@ -32331,7 +32315,6 @@ payload:
   - '+.jtv123.com'
   - '+.jtxys8.com'
   - '+.jtyjy.com'
-  - '+.jtyy.com'
   - '+.jtzhuan.xyz'
   - '+.ju33.com'
   - '+.ju51.com'
@@ -33357,7 +33340,6 @@ payload:
   - '+.kgogame.com'
   - '+.kgula.com'
   - '+.kguowai.com'
-  - '+.kgymhc.com'
   - '+.khdatasolutions.com'
   - '+.khdmw.com'
   - '+.khlysc.com'
@@ -33444,7 +33426,6 @@ payload:
   - '+.kingstarfintech.com'
   - '+.kingstarmedical.com'
   - '+.kingtysin.com'
-  - '+.kingwam.com'
   - '+.kingwisoft.com'
   - '+.kingyon.com'
   - '+.kinhom.com'
@@ -34183,6 +34164,7 @@ payload:
   - '+.kvmaa.com'
   - '+.kvogues.com'
   - '+.kvov.com'
+  - '+.kvps85.com'
   - '+.kwaicdn.com'
   - '+.kwaigobuy.com'
   - '+.kwaishop.com'
@@ -34362,7 +34344,6 @@ payload:
   - '+.laiketui.com'
   - '+.lailaihui.com'
   - '+.lailook.net'
-  - '+.laily.net'
   - '+.laima-tech.com'
   - '+.laimaidi.com'
   - '+.laiqi.net'
@@ -34521,7 +34502,6 @@ payload:
   - '+.lanvige.com'
   - '+.lanwoncloudfilm.com'
   - '+.lanwuzhe.com'
-  - '+.lanxicy.com'
   - '+.lanxinbase.com'
   - '+.lanxiniu.com'
   - '+.lanxiongsports.com'
@@ -34595,6 +34575,7 @@ payload:
   - '+.laomaotao.net'
   - '+.laomaotao.org'
   - '+.laomaotaopan.com'
+  - '+.laomoe.com'
   - '+.laonanren.cc'
   - '+.laoniushuju.com'
   - '+.laoqiange.club'
@@ -34764,7 +34745,6 @@ payload:
   - '+.ldkj-zs.com'
   - '+.ldmap.net'
   - '+.ldmnq.com'
-  - '+.ldpsfa.com'
   - '+.ldqxn.com'
   - '+.ldshj.com'
   - '+.ldsink.com'
@@ -37004,7 +36984,6 @@ payload:
   - '+.mag10000.com'
   - '+.mag998.com'
   - '+.magcloud.net'
-  - '+.magecorn.com'
   - '+.magedu.com'
   - '+.magentochina.org'
   - '+.magewell.com'
@@ -37321,7 +37300,6 @@ payload:
   - '+.marioin.com'
   - '+.markdown.xyz'
   - '+.markdream.com'
-  - '+.marker123.com'
   - '+.marketreportchina.com'
   - '+.markhoo.com'
   - '+.markiapp.com'
@@ -38491,7 +38469,6 @@ payload:
   - '+.mmbjq.com'
   - '+.mmbread.com'
   - '+.mmc-data.com'
-  - '+.mmcctuia2.com'
   - '+.mmcos.com'
   - '+.mmcsgo.com'
   - '+.mmfad.com'
@@ -39133,6 +39110,7 @@ payload:
   - '+.muyingzhijia.com'
   - '+.muyishu.com'
   - '+.muyuanfoods.com'
+  - '+.muyuekj0.com'
   - '+.muzhi.us'
   - '+.muzhigame.com'
   - '+.muzi999.com'
@@ -40489,7 +40467,6 @@ payload:
   - '+.nsshare.com'
   - '+.nsshell.com'
   - '+.nsstream.com'
-  - '+.nsszv.com'
   - '+.nsw88.com'
   - '+.nsw99.com'
   - '+.nswyun.com'
@@ -41490,7 +41467,6 @@ payload:
   - '+.paizhe.com'
   - '+.paizi.com'
   - '+.paizi.net'
-  - '+.pajkb.com'
   - '+.pajkdc.com'
   - '+.palace-international.com'
   - '+.palanceli.com'
@@ -43193,7 +43169,6 @@ payload:
   - '+.qi-ju.com'
   - '+.qi-wen.com'
   - '+.qi58.com'
-  - '+.qiachu.com'
   - '+.qiaiou.com'
   - '+.qiak.com'
   - '+.qiakr.com'
@@ -44189,6 +44164,7 @@ payload:
   - '+.quegame.com'
   - '+.quegui.run'
   - '+.queji.tw'
+  - '+.quelingfei.com'
   - '+.queniuaa.com'
   - '+.queniuak.com'
   - '+.queniubg.com'
@@ -44800,6 +44776,7 @@ payload:
   - '+.renderincloud.com'
   - '+.rendna.com'
   - '+.renegade-project.org'
+  - '+.renfei.net'
   - '+.rengwan.com'
   - '+.renhence.com'
   - '+.renji.com'
@@ -45447,6 +45424,7 @@ payload:
   - '+.rydth5.com'
   - '+.ryeex.com'
   - '+.rygjaqjaq.com'
+  - '+.ryjer.com'
   - '+.ryjiaoyu.com'
   - '+.ryjoin.com'
   - '+.rylinkworld.com'
@@ -45598,7 +45576,6 @@ payload:
   - '+.sandcomp.com'
   - '+.sandeepin.com'
   - '+.sandianzhong.com'
-  - '+.sandingtv.com'
   - '+.sanduoyun.com'
   - '+.sandworld.net'
   - '+.sandwych.com'
@@ -46739,7 +46716,6 @@ payload:
   - '+.shenghuojia.com'
   - '+.shenghuorili.com'
   - '+.shenghuowo.com'
-  - '+.shenghuoyongzhi.com'
   - '+.shengjing360.com'
   - '+.shengjoy.com'
   - '+.shengjunshi.com'
@@ -48162,7 +48138,6 @@ payload:
   - '+.smyhvae.com'
   - '+.smyx.net'
   - '+.smyxxj.com'
-  - '+.smzdm.co'
   - '+.smzdm.com'
   - '+.smzdmimg.com'
   - '+.smzdwan.com'
@@ -49440,7 +49415,6 @@ payload:
   - '+.sxnxl.com'
   - '+.sxnycl.com'
   - '+.sxol.com'
-  - '+.sxpdf.com'
   - '+.sxpdk.com'
   - '+.sxplc.com'
   - '+.sxpmg.com'
@@ -50244,6 +50218,7 @@ payload:
   - '+.tarsier-infra.com'
   - '+.tarsocial.com'
   - '+.tartscenter.com'
+  - '+.tasaiwang.com'
   - '+.tasiyun.com'
   - '+.taskcity.com'
   - '+.taskcn.com'
@@ -54612,7 +54587,6 @@ payload:
   - '+.weituibao.com'
   - '+.weitunit.com'
   - '+.weituobang.net'
-  - '+.weituoshepin.com'
   - '+.weitushe.com'
   - '+.weiwangpu.com'
   - '+.weiwangvip.com'
@@ -54916,7 +54890,6 @@ payload:
   - '+.wfbbs.com'
   - '+.wfbrood.com'
   - '+.wfc805.com'
-  - '+.wfccb.com'
   - '+.wfdata.club'
   - '+.wfeil.com'
   - '+.wfek.com'
@@ -55320,7 +55293,6 @@ payload:
   - '+.win365day.com'
   - '+.win4000.com'
   - '+.win71234.com'
-  - '+.win732.com'
   - '+.win789.com'
   - '+.win7china.com'
   - '+.win7en.com'
@@ -55337,7 +55309,6 @@ payload:
   - '+.winasdaq.com'
   - '+.winbaicai.com'
   - '+.winbaoxian.com'
-  - '+.winbic.com'
   - '+.winbjb.com'
   - '+.winbond-ic.com'
   - '+.winbons.com'
@@ -57753,6 +57724,7 @@ payload:
   - '+.xinniangjie.com'
   - '+.xinnianhua.com'
   - '+.xinnong.com'
+  - '+.xinnuodazu.com'
   - '+.xinnuoqian.com'
   - '+.xinorngyk.com'
   - '+.xinouhk.com'
@@ -58121,7 +58093,6 @@ payload:
   - '+.xlhb.com'
   - '+.xlhs.com'
   - '+.xlhtcucc.com'
-  - '+.xlimg.net'
   - '+.xlinclass.com'
   - '+.xlisp.net'
   - '+.xljnjy.com'
@@ -58911,7 +58882,6 @@ payload:
   - '+.xylink.com'
   - '+.xylmf.com'
   - '+.xymcp3.com'
-  - '+.xymens.com'
   - '+.xymfqb.com'
   - '+.xymlcs.com'
   - '+.xymvip.com'
@@ -59022,7 +58992,6 @@ payload:
   - '+.y-os.net'
   - '+.y.to'
   - '+.y007.com'
-  - '+.y1786.com'
   - '+.y1995.com'
   - '+.y2002.com'
   - '+.y5663.com'
@@ -60210,6 +60179,7 @@ payload:
   - '+.yiyum.com'
   - '+.yiyurumen.com'
   - '+.yizenb.com'
+  - '+.yizhanok.com'
   - '+.yizhanzx.com'
   - '+.yizhema.com'
   - '+.yizhengwx.com'
@@ -61251,7 +61221,6 @@ payload:
   - '+.yueyv.com'
   - '+.yuezeyi.com'
   - '+.yufeitongji.com'
-  - '+.yufengyangfan.com'
   - '+.yufu365.com'
   - '+.yufuid.com'
   - '+.yufulaidoors.com'
@@ -62127,8 +62096,6 @@ payload:
   - '+.zcyiyao.com'
   - '+.zczbzx.com'
   - '+.zczj.com'
-  - '+.zd-ddos.com'
-  - '+.zd-ddos.net'
   - '+.zd-power.com'
   - '+.zd.hk'
   - '+.zd200572.com'
