--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20230801023259
+  - DOMAIN-SUFFIX,#VER=20230802023307
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=76913
+  - DOMAIN-SUFFIX,#TOTAL_LINES=76949
   - DOMAIN-SUFFIX,0008d6ba2e.com
   - DOMAIN-SUFFIX,000dn.com
   - DOMAIN-SUFFIX,kwcdn.000dn.com
@@ -7507,6 +7507,7 @@ payload:
   - DOMAIN-SUFFIX,akwhrqkkol.com
   - DOMAIN-SUFFIX,akwxtceohbmu.xyz
   - DOMAIN-SUFFIX,akyei.xyz
+  - DOMAIN-SUFFIX,akzfxmgcq.com
   - DOMAIN-SUFFIX,akzvponimot.com
   - DOMAIN-SUFFIX,a8cv.al-on.com
   - DOMAIN-SUFFIX,marketing.alabamacu.com
@@ -8466,6 +8467,7 @@ payload:
   - DOMAIN-SUFFIX,andersenit.dk
   - DOMAIN-SUFFIX,a8.andethic.com
   - DOMAIN-SUFFIX,a9d8e7b6i5s.andgino.jp
+  - DOMAIN-SUFFIX,andhkruuiigxmkd.com
   - DOMAIN-SUFFIX,andlache.com
   - DOMAIN-SUFFIX,andmejs.com
   - DOMAIN-SUFFIX,andohs.net
@@ -9185,6 +9187,7 @@ payload:
   - DOMAIN-SUFFIX,apzdfakiso.com
   - DOMAIN-SUFFIX,aq360.club
   - DOMAIN-SUFFIX,aq7ua5ma85rddeinve.com
+  - DOMAIN-SUFFIX,aqbusmueljfy.com
   - DOMAIN-SUFFIX,aqccc.com
   - DOMAIN-SUFFIX,aqdha.com
   - DOMAIN-SUFFIX,aqdhacjwiat.com
@@ -14848,6 +14851,7 @@ payload:
   - DOMAIN-SUFFIX,cajipdiqqjijeh.xyz
   - DOMAIN-SUFFIX,cajunecch.guru
   - DOMAIN-SUFFIX,cakeprofessionally.com
+  - DOMAIN-SUFFIX,cakiglun.xyz
   - DOMAIN-SUFFIX,cakycalais.com
   - DOMAIN-SUFFIX,calamityfortuneaudio.com
   - DOMAIN-SUFFIX,calarm.info
@@ -17207,6 +17211,7 @@ payload:
   - DOMAIN-SUFFIX,d1uzjiv6zzdlbc.cloudfront.net
   - DOMAIN-SUFFIX,d1voskqidohxxs.cloudfront.net
   - DOMAIN-SUFFIX,d1w24oanovvxvg.cloudfront.net
+  - DOMAIN-SUFFIX,d1wbjksx0xxdn3.cloudfront.net
   - DOMAIN-SUFFIX,d1wd81rzdci3ru.cloudfront.net
   - DOMAIN-SUFFIX,d1wi563t0137vz.cloudfront.net
   - DOMAIN-SUFFIX,d1wix2gc2cgqis.cloudfront.net
@@ -17657,6 +17662,7 @@ payload:
   - DOMAIN-SUFFIX,db033pq6bj64g.cloudfront.net
   - DOMAIN-SUFFIX,dba9ytko5p72r.cloudfront.net
   - DOMAIN-SUFFIX,dbcdqp72lzmvj.cloudfront.net
+  - DOMAIN-SUFFIX,dbujksp6lhljo.cloudfront.net
   - DOMAIN-SUFFIX,dby7kx9z9yzse.cloudfront.net
   - DOMAIN-SUFFIX,dc08i221b0n8a.cloudfront.net
   - DOMAIN-SUFFIX,dc5k8fg5ioc8s.cloudfront.net
@@ -21698,6 +21704,7 @@ payload:
   - DOMAIN-SUFFIX,dewalt-sales.com
   - DOMAIN-SUFFIX,dewapa.top
   - DOMAIN-SUFFIX,dewcommode.space
+  - DOMAIN-SUFFIX,dewierhagger.com
   - DOMAIN-SUFFIX,dewiestsards.com
   - DOMAIN-SUFFIX,dewincubiatoll.com
   - DOMAIN-SUFFIX,dewlessjacobin.com
@@ -25285,6 +25292,7 @@ payload:
   - DOMAIN-SUFFIX,ertgbme.com
   - DOMAIN-SUFFIX,erthmefeyauk.xyz
   - DOMAIN-SUFFIX,ertjo.xyz
+  - DOMAIN-SUFFIX,erty0yx.com
   - DOMAIN-SUFFIX,geo.ertya.com
   - DOMAIN-SUFFIX,ertyvaluation.lol
   - DOMAIN-SUFFIX,eru5tdmbuwxm.com
@@ -26849,6 +26857,7 @@ payload:
   - DOMAIN-SUFFIX,fejwcnbsu.com
   - DOMAIN-SUFFIX,felidaeyojuane.com
   - DOMAIN-SUFFIX,felied.com
+  - DOMAIN-SUFFIX,feliev.com
   - DOMAIN-SUFFIX,stats.felipesere.com
   - DOMAIN-SUFFIX,felixflow.com
   - DOMAIN-SUFFIX,ablink.info.felixmobile.com.au
@@ -27298,6 +27307,7 @@ payload:
   - DOMAIN-SUFFIX,fitthings.info
   - DOMAIN-SUFFIX,fitting-population.com
   - DOMAIN-SUFFIX,fittingcentermonday.com
+  - DOMAIN-SUFFIX,fittitfucose.com
   - DOMAIN-SUFFIX,link.fitwell.co
   - DOMAIN-SUFFIX,fiumaralupin.space
   - DOMAIN-SUFFIX,webbc.fivecdm.com
@@ -28659,6 +28669,7 @@ payload:
   - DOMAIN-SUFFIX,fvgxfupisy.com
   - DOMAIN-SUFFIX,seniorliving.fvhollandseniorliving.com
   - DOMAIN-SUFFIX,use.fvr.to
+  - DOMAIN-SUFFIX,fvxlhn.xyz
   - DOMAIN-SUFFIX,fvzljv.xyz
   - DOMAIN-SUFFIX,fw-ad.jp
   - DOMAIN-SUFFIX,api.fw.tv
@@ -31447,6 +31458,8 @@ payload:
   - DOMAIN-SUFFIX,hadsokz.com
   - DOMAIN-SUFFIX,haejkmm.cn
   - DOMAIN-SUFFIX,haemorrhagedigest.com
+  - DOMAIN-SUFFIX,haffnetworkmm.com
+  - DOMAIN-SUFFIX,hafisfunnier.guru
   - DOMAIN-SUFFIX,haflinforms.top
   - DOMAIN-SUFFIX,hagboatdismast.com
   - DOMAIN-SUFFIX,stats.hager.com
@@ -32140,6 +32153,7 @@ payload:
   - DOMAIN-SUFFIX,hefrpv.xyz
   - DOMAIN-SUFFIX,heftymynah.com
   - DOMAIN-SUFFIX,hegazedatthewo.com
+  - DOMAIN-SUFFIX,hegk01a.top
   - DOMAIN-SUFFIX,hegk03a.top
   - DOMAIN-SUFFIX,hegk09a.top
   - DOMAIN-SUFFIX,hegrinhar.com
@@ -33789,6 +33803,7 @@ payload:
   - DOMAIN-SUFFIX,hvooyieoei.com
   - DOMAIN-SUFFIX,hwaawsh.com
   - DOMAIN-SUFFIX,hwanjia.com
+  - DOMAIN-SUFFIX,hwaovdomltib.com
   - DOMAIN-SUFFIX,hwchvgpc.xyz
   - DOMAIN-SUFFIX,tikn.hwgs.info
   - DOMAIN-SUFFIX,hwhefj.xyz
@@ -33904,6 +33919,7 @@ payload:
   - DOMAIN-SUFFIX,hyrcanquittor.com
   - DOMAIN-SUFFIX,link.hyre.no
   - DOMAIN-SUFFIX,hyrewusha.pro
+  - DOMAIN-SUFFIX,hyros.com
   - DOMAIN-SUFFIX,tracking.hyros.com
   - DOMAIN-SUFFIX,hysdknb.com
   - DOMAIN-SUFFIX,ab.hysdknb.com
@@ -37513,6 +37529,7 @@ payload:
   - DOMAIN-SUFFIX,jpesfzcjob.com
   - DOMAIN-SUFFIX,jpgtpbl.cn
   - DOMAIN-SUFFIX,jpgtrk.com
+  - DOMAIN-SUFFIX,jpmdwnhazw.com
   - DOMAIN-SUFFIX,smetrics.jpmorgan.com
   - DOMAIN-SUFFIX,jpnbhyba.xyz
   - DOMAIN-SUFFIX,jpqed.xyz
@@ -38351,6 +38368,7 @@ payload:
   - DOMAIN-SUFFIX,kbugxeslbjc8.com
   - DOMAIN-SUFFIX,m.kbwmt.cn
   - DOMAIN-SUFFIX,kbyjxhnweoi.com
+  - DOMAIN-SUFFIX,kbywyjnqrjaaa.top
   - DOMAIN-SUFFIX,kc9.cn
   - DOMAIN-SUFFIX,www.kc9.cn
   - DOMAIN-SUFFIX,ssc.kcamexico.com
@@ -40616,6 +40634,7 @@ payload:
   - DOMAIN-SUFFIX,yq6.lhkwy.com
   - DOMAIN-SUFFIX,lhmos.com
   - DOMAIN-SUFFIX,lhot.xyz
+  - DOMAIN-SUFFIX,lhotajl.icu
   - DOMAIN-SUFFIX,lhs-3844b.com
   - DOMAIN-SUFFIX,xopf.lhy1.xyz
   - DOMAIN-SUFFIX,ablink.juicer.li.me
@@ -41357,6 +41376,7 @@ payload:
   - DOMAIN-SUFFIX,loadingscripts.com
   - DOMAIN-SUFFIX,loadingwait.com
   - DOMAIN-SUFFIX,loaglait.com
+  - DOMAIN-SUFFIX,loaire.com
   - DOMAIN-SUFFIX,loajawun.com
   - DOMAIN-SUFFIX,loanonionbidding.com
   - DOMAIN-SUFFIX,bfg.loanzify.app
@@ -42814,6 +42834,7 @@ payload:
   - DOMAIN-SUFFIX,smetrics.marshalls.com
   - DOMAIN-SUFFIX,smetrics.marshandmclennan.com
   - DOMAIN-SUFFIX,seniorliving.marshesofskidaway.com
+  - DOMAIN-SUFFIX,marshwhisper.com
   - DOMAIN-SUFFIX,marspearelct.com
   - DOMAIN-SUFFIX,martafatass.pro
   - DOMAIN-SUFFIX,martcubic.com
@@ -45269,6 +45290,7 @@ payload:
   - DOMAIN-SUFFIX,mosquesituated.com
   - DOMAIN-SUFFIX,smetrics.mosquitojoe.com
   - DOMAIN-SUFFIX,marketing.mossinc.com
+  - DOMAIN-SUFFIX,mosswhinepanther.com
   - DOMAIN-SUFFIX,lnk.most-days.com
   - DOMAIN-SUFFIX,lnk.mostdays.com
   - DOMAIN-SUFFIX,mostlytreasure.com
@@ -46844,6 +46866,7 @@ payload:
   - DOMAIN-SUFFIX,netizen.co
   - DOMAIN-SUFFIX,netjtgcbe.xyz
   - DOMAIN-SUFFIX,tracker.netklix.com
+  - DOMAIN-SUFFIX,netlify-rum.netlify.app
   - DOMAIN-SUFFIX,privacyfriendly.netlify.app
   - DOMAIN-SUFFIX,happy-davinci-53144f.netlify.com
   - DOMAIN-SUFFIX,objective-wright-961fed.netlify.com
@@ -47182,6 +47205,7 @@ payload:
   - DOMAIN-SUFFIX,ngtraveler.com.cn
   - DOMAIN-SUFFIX,geo.ngtv.io
   - DOMAIN-SUFFIX,nguad.com
+  - DOMAIN-SUFFIX,ngukmodukule.info
   - DOMAIN-SUFFIX,ngvoicethaults.com
   - DOMAIN-SUFFIX,ggdm1.nhaidu.net
   - DOMAIN-SUFFIX,nhalcyw.com
@@ -48128,6 +48152,7 @@ payload:
   - DOMAIN-SUFFIX,ntjmnyzwkpb.com
   - DOMAIN-SUFFIX,eed.ntjrh.com
   - DOMAIN-SUFFIX,ntlab.org
+  - DOMAIN-SUFFIX,ntmatchwithy.info
   - DOMAIN-SUFFIX,ntoftheusysia.info
   - DOMAIN-SUFFIX,ntoftheusysianedt.info
   - DOMAIN-SUFFIX,ntozchv.icu
@@ -49728,6 +49753,7 @@ payload:
   - DOMAIN-SUFFIX,optyruntchan.com
   - DOMAIN-SUFFIX,optzsrv.com
   - DOMAIN-SUFFIX,opulent-reply.pro
+  - DOMAIN-SUFFIX,opus-whisky.com
   - DOMAIN-SUFFIX,opvanillishan.com
   - DOMAIN-SUFFIX,opxaxqxaqo.com
   - DOMAIN-SUFFIX,opxnwz.shop
@@ -51021,6 +51047,7 @@ payload:
   - DOMAIN-SUFFIX,smetrics.pbteen.ca
   - DOMAIN-SUFFIX,smetrics.pbteen.com
   - DOMAIN-SUFFIX,pbterra.com
+  - DOMAIN-SUFFIX,pbtsjh.xyz
   - DOMAIN-SUFFIX,pbtxt.win
   - DOMAIN-SUFFIX,pbxai.com
   - DOMAIN-SUFFIX,pc-ads.com
@@ -56222,6 +56249,7 @@ payload:
   - DOMAIN-SUFFIX,refreshinglackdignified.com
   - DOMAIN-SUFFIX,refreshmentdistrustinstalled.com
   - DOMAIN-SUFFIX,refreshmentsdefect.com
+  - DOMAIN-SUFFIX,refreshmentswilfulswollen.com
   - DOMAIN-SUFFIX,refreshnerer27.info
   - DOMAIN-SUFFIX,refreshnerer27rb.info
   - DOMAIN-SUFFIX,refrigeratemaimbrunette.com
@@ -59060,6 +59088,7 @@ payload:
   - DOMAIN-SUFFIX,sength.com
   - DOMAIN-SUFFIX,mktg.senneca.com
   - DOMAIN-SUFFIX,a8.sennendo.jp
+  - DOMAIN-SUFFIX,senonsiatinus.com
   - DOMAIN-SUFFIX,smetrics.sensai-cosmetics.com
   - DOMAIN-SUFFIX,sensationaleducate.com
   - DOMAIN-SUFFIX,tag.search.sensefuel.live
@@ -59902,6 +59931,7 @@ payload:
   - DOMAIN-SUFFIX,umini.shujupie.com
   - DOMAIN-SUFFIX,shujuwu.com
   - DOMAIN-SUFFIX,shukriya90.com
+  - DOMAIN-SUFFIX,shulugoo.net
   - DOMAIN-SUFFIX,shumanwu.info
   - DOMAIN-SUFFIX,ddf.shumayin.com
   - DOMAIN-SUFFIX,shumsooz.net
@@ -63168,6 +63198,7 @@ payload:
   - DOMAIN-SUFFIX,sumbalowen.com
   - DOMAIN-SUFFIX,sumbreta.com
   - DOMAIN-SUFFIX,a1.sumiaowang.com
+  - DOMAIN-SUFFIX,sumids.com
   - DOMAIN-SUFFIX,stats.sumikai.com
   - DOMAIN-SUFFIX,a8.sumilena.co.jp
   - DOMAIN-SUFFIX,adebiscname.sumirin-ht.co.jp
@@ -63477,6 +63508,7 @@ payload:
   - DOMAIN-SUFFIX,tk.svsound.com
   - DOMAIN-SUFFIX,svtlgjmqyzmwz.com
   - DOMAIN-SUFFIX,svtrd.com
+  - DOMAIN-SUFFIX,svvev3.com
   - DOMAIN-SUFFIX,svvrkmqyvb.xyz
   - DOMAIN-SUFFIX,svyksa.info
   - DOMAIN-SUFFIX,sw-rail-7.com
@@ -63566,6 +63598,7 @@ payload:
   - DOMAIN-SUFFIX,swingelinseys.com
   - DOMAIN-SUFFIX,swingtoeswinds.com
   - DOMAIN-SUFFIX,swirlygossips.com
+  - DOMAIN-SUFFIX,swishedbigha.digital
   - DOMAIN-SUFFIX,swisherplacard.space
   - DOMAIN-SUFFIX,swishu.com
   - DOMAIN-SUFFIX,swiss-counter.com
@@ -65797,6 +65830,7 @@ payload:
   - DOMAIN-SUFFIX,timot-cvk.info
   - DOMAIN-SUFFIX,timothy.wang
   - DOMAIN-SUFFIX,timpanosheng.com
+  - DOMAIN-SUFFIX,timtamti.net
   - DOMAIN-SUFFIX,timteen.com
   - DOMAIN-SUFFIX,timxrio.com
   - DOMAIN-SUFFIX,tinacorners.xyz
@@ -68671,6 +68705,7 @@ payload:
   - DOMAIN-SUFFIX,upapi.net
   - DOMAIN-SUFFIX,uparceuson.com
   - DOMAIN-SUFFIX,uparpu.com
+  - DOMAIN-SUFFIX,upboostarmaria.com
   - DOMAIN-SUFFIX,upbuoyearfuls.com
   - DOMAIN-SUFFIX,dmtgo.upc.biz
   - DOMAIN-SUFFIX,smetrics.upc.ch
@@ -75802,6 +75837,7 @@ payload:
   - DOMAIN-SUFFIX,yziwoidi.icu
   - DOMAIN-SUFFIX,yzjihang.cn
   - DOMAIN-SUFFIX,m.yzjlsb.com
+  - DOMAIN-SUFFIX,yzllux.xyz
   - DOMAIN-SUFFIX,yzus09by.com
   - DOMAIN-SUFFIX,t.yzwr588.com
   - DOMAIN-SUFFIX,yzykttcy.com
