--- a/directbak.yaml
+++ b/directbak.yaml
@@ -273,7 +273,6 @@ payload:
   - '+.0430.com'
   - '+.0431cn.com'
   - '+.0437.com'
-  - '+.0448w.com'
   - '+.0452e.com'
   - '+.0453.com'
   - '+.0455zd.com'
@@ -1409,7 +1408,6 @@ payload:
   - '+.1768.com'
   - '+.176878.com'
   - '+.176quan.com'
-  - '+.1772.site'
   - '+.1773.com'
   - '+.1778.com'
   - '+.178.com'
@@ -1712,7 +1710,6 @@ payload:
   - '+.1domedia.com'
   - '+.1drv.ws'
   - '+.1dufish.com'
-  - '+.1dume.com'
   - '+.1dutm.com'
   - '+.1f11.com'
   - '+.1fenda.com'
@@ -1885,6 +1882,7 @@ payload:
   - '+.202m.com'
   - '+.202wan.com'
   - '+.2048sj.com'
+  - '+.2049baby.com'
   - '+.205.com'
   - '+.2080ly.com'
   - '+.208xs.com'
@@ -3720,7 +3718,6 @@ payload:
   - '+.51g3.com'
   - '+.51g3.net'
   - '+.51g4.com'
-  - '+.51gfl.com'
   - '+.51gfw.com'
   - '+.51ggwu.com'
   - '+.51gh.net'
@@ -5038,7 +5035,6 @@ payload:
   - '+.65688qp.com'
   - '+.6571n.com'
   - '+.65875.com'
-  - '+.65918.tw'
   - '+.659595.com'
   - '+.65house.com'
   - '+.65mhxy.com'
@@ -5888,7 +5884,6 @@ payload:
   - '+.860598.com'
   - '+.860a.com'
   - '+.861522.com'
-  - '+.8616.at'
   - '+.86175.com'
   - '+.861817.com'
   - '+.861ppt.com'
@@ -6093,7 +6088,6 @@ payload:
   - '+.8cheche.com'
   - '+.8cname.com'
   - '+.8cnet.com'
-  - '+.8da.com'
   - '+.8ddao.com'
   - '+.8dexpress.com'
   - '+.8dn.com'
@@ -7292,7 +7286,6 @@ payload:
   - '+.admin88.com'
   - '+.adminportal.cdnetworks.com'
   - '+.admintony.com'
-  - '+.adminxy.com'
   - '+.admqr.com'
   - '+.admxh.com'
   - '+.adnineplus.com'
@@ -7680,7 +7673,6 @@ payload:
   - '+.aikang.com'
   - '+.aikcms.com'
   - '+.aiketour.com'
-  - '+.aikeu.com'
   - '+.aikexi.com'
   - '+.aikf.com'
   - '+.aikucun.com'
@@ -8403,7 +8395,6 @@ payload:
   - '+.annuaire.plus'
   - '+.anoah.com'
   - '+.anonym-hi.com'
-  - '+.anorectal.net'
   - '+.anosmcloud.com'
   - '+.anoyi.com'
   - '+.anqingonline.com'
@@ -9161,7 +9152,6 @@ payload:
   - '+.avatr.com'
   - '+.avc-mr.com'
   - '+.avc-ott.com'
-  - '+.avdll.com'
   - '+.avemaria.fun'
   - '+.aves.art'
   - '+.avgh5.com'
@@ -10098,7 +10088,6 @@ payload:
   - '+.bego.cc'
   - '+.begoto.com'
   - '+.begowin.com'
-  - '+.begup.com'
   - '+.behake.com'
   - '+.behe.com'
   - '+.bei1688.com'
@@ -13234,7 +13223,6 @@ payload:
   - '+.chaofanaishangyu.com'
   - '+.chaofanshuma.com'
   - '+.chaofenxiang.vip'
-  - '+.chaogmp.com'
   - '+.chaohuishou.com'
   - '+.chaoji.com'
   - '+.chaojibiaoge.com'
@@ -14289,7 +14277,6 @@ payload:
   - '+.chizhouren.com'
   - '+.chiznews.com'
   - '+.chjso.com'
-  - '+.chklingw.com'
   - '+.chloe99.com'
   - '+.chmecc.org'
   - '+.chmed.net'
@@ -15597,6 +15584,7 @@ payload:
   - '+.cnzhengmu.com'
   - '+.cnzhibo.com'
   - '+.cnzhiyuanhui.com'
+  - '+.cnzjj.com'
   - '+.cnzjol.com'
   - '+.cnzlapp.com'
   - '+.cnzsqh.com'
@@ -17198,7 +17186,6 @@ payload:
   - '+.daoxiangcun.com'
   - '+.daoxila.com'
   - '+.daoxila.net'
-  - '+.daoyouz.com'
   - '+.daoyu8.com'
   - '+.daozhao.com'
   - '+.dapaizixun.com'
@@ -19034,6 +19021,7 @@ payload:
   - '+.dts007.com'
   - '+.dtstack.com'
   - '+.dtstatic.com'
+  - '+.dtston.com'
   - '+.dttc-icp.com'
   - '+.dttt.net'
   - '+.dtuosh.com'
@@ -19195,6 +19183,7 @@ payload:
   - '+.duotegame.com'
   - '+.duoti181.shop'
   - '+.duotoupiao.com'
+  - '+.duotuscdn.com'
   - '+.duouoo.com'
   - '+.duowan.com'
   - '+.duowanns.com'
@@ -19699,7 +19688,6 @@ payload:
   - '+.ebnew.com'
   - '+.ebocert.com'
   - '+.ebookbao.net'
-  - '+.ebookcn.com'
   - '+.ebookmen.com'
   - '+.ebopark.com'
   - '+.eboxmaker.com'
@@ -19986,7 +19974,6 @@ payload:
   - '+.eexiaoshuo.com'
   - '+.eexing.com'
   - '+.eeyaa.net'
-  - '+.eeybo.com'
   - '+.eeyxs.com'
   - '+.eeyy.com'
   - '+.eeyys.com'
@@ -20395,7 +20382,6 @@ payload:
   - '+.eplove.com'
   - '+.epoos.com'
   - '+.eprezi.com'
-  - '+.eps114.com'
   - '+.epsonconnect.com'
   - '+.epstsoft.com'
   - '+.epub360.com'
@@ -21647,7 +21633,6 @@ payload:
   - '+.fieldschina.com'
   - '+.fifo.cc'
   - '+.fifsky.com'
-  - '+.figoc.pw'
   - '+.fiinote.com'
   - '+.fiio.com'
   - '+.fiio.net'
@@ -23286,7 +23271,6 @@ payload:
   - '+.ghostwin7.net'
   - '+.ghostxp2.com'
   - '+.ghostxpsp3.net'
-  - '+.ghostxx.com'
   - '+.ghproxy.com'
   - '+.ghpy3333.com'
   - '+.ghpym.com'
@@ -23932,7 +23916,6 @@ payload:
   - '+.gree.com'
   - '+.greebox.com'
   - '+.green12306.com'
-  - '+.greenbodhi.com'
   - '+.greenchengjian.com'
   - '+.greencompute.org'
   - '+.greendh.com'
@@ -24673,7 +24656,6 @@ payload:
   - '+.gzszgas.com'
   - '+.gztaiyou.com'
   - '+.gztcdj.com'
-  - '+.gztclwx.net'
   - '+.gztfgame.com'
   - '+.gzthrc.com'
   - '+.gztime.cc'
@@ -24800,7 +24782,6 @@ payload:
   - '+.haawking.com'
   - '+.habadog.com'
   - '+.habbygames.com'
-  - '+.haberbank.xyz'
   - '+.hac-ker.net'
   - '+.hack-cn.com'
   - '+.hack-gov.com'
@@ -27695,7 +27676,6 @@ payload:
   - '+.huim.com'
   - '+.huimaiche.com'
   - '+.huiman.net'
-  - '+.huimatong.com'
   - '+.huimee.com'
   - '+.huimee.net'
   - '+.huimeisports.com'
@@ -27936,6 +27916,7 @@ payload:
   - '+.husenji.com'
   - '+.hushangcaifu.com'
   - '+.hushuang.me'
+  - '+.husiyang.com'
   - '+.hust-laser.com'
   - '+.hust-snde.com'
   - '+.hust-wuxi.com'
@@ -28646,7 +28627,6 @@ payload:
   - '+.icnkr.com'
   - '+.icnote.com'
   - '+.icntv.tv'
-  - '+.icoa.vip'
   - '+.icoat.cc'
   - '+.icoc.bz'
   - '+.icoc.cc'
@@ -34153,7 +34133,6 @@ payload:
   - '+.kveww.com'
   - '+.kvexx.com'
   - '+.kvezz.com'
-  - '+.kvhcc.com'
   - '+.kvhdd.com'
   - '+.kvhee.com'
   - '+.kvhmm.com'
@@ -34222,6 +34201,7 @@ payload:
   - '+.ky151.co'
   - '+.ky55005.com'
   - '+.ky5yx.com'
+  - '+.ky7yx.com'
   - '+.ky958.com'
   - '+.kybapp.com'
   - '+.kybapp.net'
@@ -34531,7 +34511,6 @@ payload:
   - '+.lanzouy.com'
   - '+.lanzouz.com'
   - '+.lanzun.net'
-  - '+.lao9123.com'
   - '+.laob.me'
   - '+.laobaigan-hs.com'
   - '+.laobandq.com'
@@ -35086,7 +35065,6 @@ payload:
   - '+.leyoucp.com'
   - '+.leyoujia.com'
   - '+.leyouquan.com'
-  - '+.leyu.com'
   - '+.leyue100.com'
   - '+.leyun001.com'
   - '+.leyungame.com'
@@ -36041,7 +36019,6 @@ payload:
   - '+.locvps.net'
   - '+.lodashjs.com'
   - '+.loexu.com'
-  - '+.lofficielchina.net'
   - '+.loftcn.com'
   - '+.lofter.com'
   - '+.loftshine.com'
@@ -36809,7 +36786,6 @@ payload:
   - '+.lysteel.com'
   - '+.lysy360.com'
   - '+.lythw.com'
-  - '+.lytmgd.com'
   - '+.lytning.xyz'
   - '+.lytoufang.com'
   - '+.lytpw.com'
@@ -37236,7 +37212,6 @@ payload:
   - '+.manyoujing.net'
   - '+.manyupay.com'
   - '+.manzhan.com'
-  - '+.manzhan8.com'
   - '+.manzj.net'
   - '+.manzuo.com'
   - '+.mao-shen.com'
@@ -37350,7 +37325,6 @@ payload:
   - '+.mateair.com'
   - '+.mater-rep.com'
   - '+.math168.com'
-  - '+.mathchina.net'
   - '+.mathequality.com'
   - '+.mathfan.com'
   - '+.mathoe.com'
@@ -38982,7 +38956,6 @@ payload:
   - '+.mt4v4.com'
   - '+.mt77.com'
   - '+.mt888vip.com'
-  - '+.mtasia.net'
   - '+.mtavip.com'
   - '+.mtblj.com'
   - '+.mtchome.com'
@@ -39445,7 +39418,6 @@ payload:
   - '+.myyzd.com'
   - '+.myzaker.com'
   - '+.myzhiniu.com'
-  - '+.myzhongjin.com'
   - '+.myzte.com'
   - '+.mz-oneacg.com'
   - '+.mz2225555.com'
@@ -39577,7 +39549,6 @@ payload:
   - '+.nantong-hst.com'
   - '+.nantonghua.net'
   - '+.nanxueqx.com'
-  - '+.nanxunjob.com'
   - '+.nanyangcable.com'
   - '+.nanyinwealth.com'
   - '+.nanyuetong.com'
@@ -40523,7 +40494,6 @@ payload:
   - '+.nucc.com'
   - '+.nucleisys.com'
   - '+.nudpqt.com'
-  - '+.nuecidc.com'
   - '+.nuedcchina.com'
   - '+.nufans.net'
   - '+.nullice.com'
@@ -41522,7 +41492,6 @@ payload:
   - '+.pangupy.com'
   - '+.panguso.com'
   - '+.pangxieke.com'
-  - '+.pangzhan.net'
   - '+.panjindamibest.com'
   - '+.panjunwen.com'
   - '+.panku.cc'
@@ -41649,6 +41618,7 @@ payload:
   - '+.paympay.com'
   - '+.payrao.com'
   - '+.paysapi.com'
+  - '+.paytbf.com'
   - '+.payxinyi.com'
   - '+.pb114.xyz'
   - '+.pb89.com'
@@ -42879,7 +42849,6 @@ payload:
   - '+.q-alumni.com'
   - '+.q-dazzle.com'
   - '+.q-supreme.com'
-  - '+.q0760.com'
   - '+.q1.com'
   - '+.q1qfc323.com'
   - '+.q1qq2.com'
@@ -43684,7 +43653,6 @@ payload:
   - '+.qixingquan.com'
   - '+.qixingtang.com'
   - '+.qixoo.com'
-  - '+.qixuan520.com'
   - '+.qixuny.com'
   - '+.qiye.la'
   - '+.qiye.net'
@@ -43801,6 +43769,7 @@ payload:
   - '+.qmei.me'
   - '+.qmei.vip'
   - '+.qmf3.cc'
+  - '+.qmhd87.com'
   - '+.qmht.com'
   - '+.qmht.mobi'
   - '+.qmiaomh.com'
@@ -43889,7 +43858,6 @@ payload:
   - '+.qqdiannao.com'
   - '+.qqdiannaoguanjiadl.com'
   - '+.qqdna.com'
-  - '+.qqdswl.com'
   - '+.qqe2.com'
   - '+.qqenglish.com'
   - '+.qqeo.com'
@@ -44174,6 +44142,7 @@ payload:
   - '+.queniuhy.com'
   - '+.queniuiq.com'
   - '+.queniukr.com'
+  - '+.queniukt.com'
   - '+.queniukw.com'
   - '+.queniupl.com'
   - '+.queniuqy.com'
@@ -45610,7 +45579,6 @@ payload:
   - '+.sanjun.com'
   - '+.sankengriji.com'
   - '+.sankgo.com'
-  - '+.sanko-drink.com'
   - '+.sankougift.com'
   - '+.sankuai.com'
   - '+.sanlan123.com'
@@ -47535,7 +47503,6 @@ payload:
   - '+.sigmastarsemi.com'
   - '+.sigmoblive.com'
   - '+.sigongzi.shop'
-  - '+.sigu.cc'
   - '+.siguoya.name'
   - '+.siguschool.com'
   - '+.sihai-inc.com'
@@ -48825,7 +48792,6 @@ payload:
   - '+.stat18.com'
   - '+.static.cdnetworks.com'
   - '+.static.eprintsw.com'
-  - '+.static.yangfd.com'
   - '+.staticaa.com'
   - '+.staticdn.net'
   - '+.staticec.com'
@@ -49130,7 +49096,6 @@ payload:
   - '+.suningestate.com'
   - '+.suningholdings.com'
   - '+.sunjs.com'
-  - '+.sunland.cc'
   - '+.sunlands.com'
   - '+.sunlandstudy.com'
   - '+.sunlandvip.com'
@@ -49406,6 +49371,7 @@ payload:
   - '+.sxmaps.com'
   - '+.sxmcwlw.com'
   - '+.sxmtdz.com'
+  - '+.sxmxwh.com'
   - '+.sxmyh.com'
   - '+.sxncb.com'
   - '+.sxnfss.com'
@@ -49464,7 +49430,6 @@ payload:
   - '+.sxzt.org'
   - '+.sxzydj.com'
   - '+.sy-home.com'
-  - '+.sy1106.com'
   - '+.sy12306.com'
   - '+.sy12328.com'
   - '+.sy2k.com'
@@ -50959,7 +50924,6 @@ payload:
   - '+.time-weekly.com'
   - '+.time-year.com'
   - '+.time.izatcloud.net'
-  - '+.time2011.com'
   - '+.timecoo.com'
   - '+.timedg.com'
   - '+.timenote.cc'
@@ -51453,7 +51417,6 @@ payload:
   - '+.toshiba-tnis.com'
   - '+.toshow.com'
   - '+.tospur.com'
-  - '+.tot.name'
   - '+.totalacg.com'
   - '+.totodi.com'
   - '+.totoro.pub'
@@ -52248,7 +52211,6 @@ payload:
   - '+.txyapp.com'
   - '+.txyes.com'
   - '+.txylab.com'
-  - '+.txystdzzc.com'
   - '+.txzad.com'
   - '+.txzb.app'
   - '+.txzing.com'
@@ -52559,7 +52521,6 @@ payload:
   - '+.uhuitong.com'
   - '+.uhuwang.com'
   - '+.uhzcdn.com'
-  - '+.ui001.com'
   - '+.ui100day.com'
   - '+.ui63.com'
   - '+.uibaba.com'
@@ -52814,7 +52775,6 @@ payload:
   - '+.upin.com'
   - '+.upkao.com'
   - '+.uplinux.com'
-  - '+.upload.yangfd.com'
   - '+.uplookedu.com'
   - '+.uplooking.com'
   - '+.upnb.com'
@@ -53528,6 +53488,7 @@ payload:
   - '+.vmallres.com'
   - '+.vmanhua.com'
   - '+.vmartaw.com'
+  - '+.vmaya.com'
   - '+.vmdo.net'
   - '+.vmengblog.com'
   - '+.vmeti.com'
@@ -55115,7 +55076,6 @@ payload:
   - '+.whpx.net'
   - '+.whqcbj.com'
   - '+.whqhyg.com'
-  - '+.whqiansou027.com'
   - '+.whqtdjy.com'
   - '+.whqunyu.com'
   - '+.whqywl.com'
@@ -55850,7 +55810,6 @@ payload:
   - '+.wping.org'
   - '+.wpjam.com'
   - '+.wpk8.com'
-  - '+.wplat.com'
   - '+.wplizhi.com'
   - '+.wpmtp.com'
   - '+.wporder.com'
@@ -56131,7 +56090,6 @@ payload:
   - '+.wuliujia2018.com'
   - '+.wulong365.com'
   - '+.wulvxing.com'
-  - '+.wuma888.com'
   - '+.wumart.com'
   - '+.wumeishebei.com'
   - '+.wumii.com'
@@ -57816,7 +57774,6 @@ payload:
   - '+.xinyou.com'
   - '+.xinyour.com'
   - '+.xinyu19.com'
-  - '+.xinyuechao.com'
   - '+.xinyuefei.com'
   - '+.xinyueseo.com'
   - '+.xinyukj99.com'
@@ -59045,7 +59002,6 @@ payload:
   - '+.yamibo.com'
   - '+.yanbinghu.com'
   - '+.yanbm.com'
-  - '+.yanboguoji.com'
   - '+.yanboyuan.com'
   - '+.yanchebang.com'
   - '+.yanchengzx.com'
@@ -59054,7 +59010,6 @@ payload:
   - '+.yandui.com'
   - '+.yanedu.com'
   - '+.yanfen.online'
-  - '+.yang16.com'
   - '+.yangbing.club'
   - '+.yangchenglianhe.com'
   - '+.yangchunjian.com'
@@ -61551,6 +61506,7 @@ payload:
   - '+.yusi.com'
   - '+.yusi.tv'
   - '+.yusi123.com'
+  - '+.yutai365.com'
   - '+.yutaoyouxi.com'
   - '+.yuteng.site'
   - '+.yutennet.com'
@@ -63429,7 +63385,6 @@ payload:
   - '+.zikaoshu.net'
   - '+.zikaoshu.vip'
   - '+.zikaosw.com'
-  - '+.zike.com'
   - '+.zikeys.com'
   - '+.zikoo.com'
   - '+.ziku123.com'
@@ -63731,6 +63686,7 @@ payload:
   - '+.zkii.net'
   - '+.zking.com'
   - '+.zkl2333.com'
+  - '+.zkmob.net'
   - '+.zkoffcn.com'
   - '+.zkpk.org'
   - '+.zkrdlab.com'
