--- a/directbak.yaml
+++ b/directbak.yaml
@@ -15034,7 +15034,6 @@ payload:
   - '+.cn.bing.net'
   - '+.cn.msi.com'
   - '+.cn.net'
-  - '+.cn.pandora.net'
   - '+.cn.vc'
   - '+.cn.vu'
   - '+.cn.windowssearch.com'
@@ -17103,6 +17102,7 @@ payload:
   - '+.dangwan.com'
   - '+.dangzhi.com'
   - '+.dangzhi.net'
+  - '+.dangzhu.net'
   - '+.danhua.org'
   - '+.danhuaer.com'
   - '+.daniao.org'
@@ -23252,7 +23252,6 @@ payload:
   - '+.ghatg.com'
   - '+.ghboke.com'
   - '+.ghgy.com'
-  - '+.ghgy.net'
   - '+.ghibliwiki.org'
   - '+.ghjie.com'
   - '+.ghlawyer.net'
@@ -29342,7 +29341,6 @@ payload:
   - '+.imitui.com'
   - '+.imixpark.com'
   - '+.imjiayin.com'
-  - '+.imkerwin.com'
   - '+.imkevinyang.com'
   - '+.imkira.com'
   - '+.imlaidian.com'
@@ -30628,7 +30626,6 @@ payload:
   - '+.jdzdeyy.com'
   - '+.jdzeduyun.com'
   - '+.jdzj.com'
-  - '+.jdzjdz.com'
   - '+.jdzmc.com'
   - '+.jdzol.com'
   - '+.jdzol.net'
@@ -51732,7 +51729,6 @@ payload:
   - '+.tsyqb.com'
   - '+.tsyvps.com'
   - '+.tsyzm.com'
-  - '+.tsz.com'
   - '+.tszckj.com'
   - '+.tszhjk.com'
   - '+.tszyzx.com'
@@ -53794,6 +53790,7 @@ payload:
   - '+.waf.cdnetworks.com'
   - '+.wafcn.com'
   - '+.wafunny.com'
+  - '+.wafzi.com'
   - '+.waheaven.com'
   - '+.wahlap.com'
   - '+.wahongyu.com'
@@ -54404,7 +54401,6 @@ payload:
   - '+.weicaifu.com'
   - '+.weicewang.com'
   - '+.weichaishi.com'
-  - '+.weichen.org'
   - '+.weicher-sz.com'
   - '+.weiclicai.com'
   - '+.weico.cc'
