--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2154,7 +2154,6 @@ payload:
   - '+.24kdh.com'
   - '+.24ker.com'
   - '+.24kplus.com'
-  - '+.24kwx.com'
   - '+.24maker.com'
   - '+.24money.com'
   - '+.24om.com'
@@ -3644,7 +3643,6 @@ payload:
   - '+.51chaoban.com'
   - '+.51chongdian.net'
   - '+.51chost.com'
-  - '+.51chuguo.org'
   - '+.51chuli.com'
   - '+.51cir.com'
   - '+.51cjyy.com'
@@ -8252,6 +8250,7 @@ payload:
   - '+.amicool.net'
   - '+.amif-expo.com'
   - '+.amijiaoyu.com'
+  - '+.amindbox.com'
   - '+.aminer.org'
   - '+.aminglinux.com'
   - '+.amo9.com'
@@ -11587,7 +11586,6 @@ payload:
   - '+.btcwatch.com'
   - '+.btdad.live'
   - '+.btdad17.xyz'
-  - '+.btddfk.com'
   - '+.btdog.com'
   - '+.btgame.com'
   - '+.btgame01.com'
@@ -16486,7 +16484,6 @@ payload:
   - '+.ctoutiao.com'
   - '+.ctqcw.com'
   - '+.ctracer.net'
-  - '+.ctrip-lvyou.com'
   - '+.ctrip-ttd.hk'
   - '+.ctrip.co.id'
   - '+.ctrip.co.kr'
@@ -17564,7 +17561,6 @@ payload:
   - '+.dedesos.com'
   - '+.dedeyun.com'
   - '+.dedezhuji.com'
-  - '+.deehai.com'
   - '+.deemob.com'
   - '+.deemos.com'
   - '+.deepbluenetwork.com'
@@ -18572,6 +18568,7 @@ payload:
   - '+.doh.pub'
   - '+.dohuo.com'
   - '+.doido.com'
+  - '+.doii.cc'
   - '+.doit.am'
   - '+.doitim.com'
   - '+.doiua.com'
@@ -28621,7 +28618,6 @@ payload:
   - '+.icminer.com'
   - '+.icmomo.com'
   - '+.icmsdev.com'
-  - '+.icmyk.cc'
   - '+.icnjob.com'
   - '+.icnkr.com'
   - '+.icnote.com'
@@ -35469,6 +35465,7 @@ payload:
   - '+.linglong.dev'
   - '+.linglongart.com'
   - '+.linglongtech.com'
+  - '+.lingmo.org'
   - '+.lingmovie.com'
   - '+.lingnanpass.com'
   - '+.lingocn.com'
@@ -35802,7 +35799,6 @@ payload:
   - '+.livesupport24x7.com'
   - '+.liveuc.net'
   - '+.livevideostack.com'
-  - '+.livku.com'
   - '+.livotre.com'
   - '+.liwai.com'
   - '+.liweijia.com'
@@ -39707,6 +39703,7 @@ payload:
   - '+.nearsnet.com'
   - '+.nease.net'
   - '+.neat-reader.com'
+  - '+.neatifyapp.com'
   - '+.nebulogy.com'
   - '+.nedaex.com'
   - '+.nedigitals.com'
@@ -44902,6 +44899,7 @@ payload:
   - '+.rinbowe.com'
   - '+.ringdoll.com'
   - '+.rinlink.com'
+  - '+.rinvay.cc'
   - '+.ripic.xyz'
   - '+.rippleos.com'
   - '+.rippletek.com'
@@ -45660,7 +45658,6 @@ payload:
   - '+.sbr-info.com'
   - '+.sbrj.net'
   - '+.sbt123.com'
-  - '+.sbwml.net'
   - '+.sbwxz.com'
   - '+.sbzj.com'
   - '+.sc-jiaoyu.com'
@@ -47766,7 +47763,6 @@ payload:
   - '+.siyuweb.com'
   - '+.sizeofvoid.net'
   - '+.sizuo.com'
-  - '+.sizushaofu.com'
   - '+.sj-lawyer.com'
   - '+.sj0763.com'
   - '+.sj11hb.com'
@@ -48784,6 +48780,7 @@ payload:
   - '+.startos.org'
   - '+.startup-partner.com'
   - '+.starwarschina.com'
+  - '+.starx-w.com'
   - '+.starxn.com'
   - '+.stat-nba.com'
   - '+.stat18.com'
@@ -51455,7 +51452,6 @@ payload:
   - '+.tourye.com'
   - '+.toushibao.com'
   - '+.toushivip.com'
-  - '+.toutiao-xinwen.com'
   - '+.toutiao.com'
   - '+.toutiao.io'
   - '+.toutiao.org'
@@ -53200,7 +53196,6 @@ payload:
   - '+.venuscn.com'
   - '+.venustrain.com'
   - '+.vephp.com'
-  - '+.ver1.pub'
   - '+.verdareto.com'
   - '+.verisilicon.com'
   - '+.verisyno.com'
@@ -57522,6 +57517,7 @@ payload:
   - '+.xinfu888.com'
   - '+.xinfushe.com'
   - '+.xing73.com'
+  - '+.xingai.com'
   - '+.xingames.com'
   - '+.xingbangip.com'
   - '+.xingbo.tv'
@@ -64275,7 +64271,6 @@ payload:
   - '+.zwkf.net'
   - '+.zwlhome.com'
   - '+.zwoptical.com'
-  - '+.zwpearl.com'
   - '+.zws2.com'
   - '+.zwtianshangm.com'
   - '+.zwtkl8.com'
