--- a/directbak.yaml
+++ b/directbak.yaml
@@ -6230,7 +6230,6 @@ payload:
   - '+.91985.com'
   - '+.91ac.com'
   - '+.91act.com'
-  - '+.91aliyun.com'
   - '+.91all.net'
   - '+.91anjian.com'
   - '+.91art.net'
@@ -8824,6 +8823,7 @@ payload:
   - '+.ares.dl.playstation.net'
   - '+.arestech-sz.com'
   - '+.areweloongyet.com'
+  - '+.arfans.com'
   - '+.arhieason.com'
   - '+.arhoo.com'
   - '+.ariesmob.com'
@@ -10186,6 +10186,7 @@ payload:
   - '+.bendibao.com'
   - '+.bendiso.com'
   - '+.bendiw.cc'
+  - '+.bendizhidao.com'
   - '+.benduo.net'
   - '+.benellimotor.com'
   - '+.bengbeng.com'
@@ -26195,6 +26196,7 @@ payload:
   - '+.hi2000.net'
   - '+.hiaal.com'
   - '+.hiagr.com'
+  - '+.hiaiabc.com'
   - '+.hiapk.com'
   - '+.hiavr.com'
   - '+.hibea.com'
@@ -31983,7 +31985,6 @@ payload:
   - '+.jpbeta.net'
   - '+.jpchinapress.com'
   - '+.jpeen.com'
-  - '+.jpegonline.com'
   - '+.jperation.com'
   - '+.jpg.cm'
   - '+.jpggod.com'
@@ -38504,6 +38505,7 @@ payload:
   - '+.mobotap.com'
   - '+.mobring.co'
   - '+.mobrtb.com'
+  - '+.mobsurl.com'
   - '+.mobtou.com'
   - '+.mobvoi.com'
   - '+.mocache.com'
@@ -38927,6 +38929,7 @@ payload:
   - '+.mtcsys.com'
   - '+.mtcx99.com'
   - '+.mtcxsw.com'
+  - '+.mtcxx.com'
   - '+.mtdpai.com'
   - '+.mtdpgame.com'
   - '+.mtedu.com'
@@ -39294,6 +39297,7 @@ payload:
   - '+.mypethome.com'
   - '+.mypian.com'
   - '+.mypiao.com'
+  - '+.mypiaojia.com'
   - '+.mypitaya.com'
   - '+.mypity.com'
   - '+.mypm.net'
@@ -54181,6 +54185,7 @@ payload:
   - '+.wdmcake.com'
   - '+.wdmuz.com'
   - '+.wdodo.com'
+  - '+.wdomob.com'
   - '+.wdres.com'
   - '+.wdsrc.com'
   - '+.wdstory.com'
@@ -56811,6 +56816,7 @@ payload:
   - '+.xhpiano.com'
   - '+.xhqqt.com'
   - '+.xhscdn.com'
+  - '+.xhscdn.net'
   - '+.xhsd.com'
   - '+.xhslink.com'
   - '+.xhsyww.com'
@@ -60150,6 +60156,7 @@ payload:
   - '+.ykqnl.com'
   - '+.ykread.com'
   - '+.yks365.com'
+  - '+.yksdks.com'
   - '+.yksq.net'
   - '+.ykstarshine.com'
   - '+.yksuit.com'
