--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2143,7 +2143,6 @@ payload:
   - '+.248.com'
   - '+.2481e.com'
   - '+.248xyx.com'
-  - '+.2490075.com'
   - '+.249m.com'
   - '+.24geban.com'
   - '+.24haowan.com'
@@ -2257,6 +2256,7 @@ payload:
   - '+.28123.com'
   - '+.281826.vip'
   - '+.2827.com'
+  - '+.28283.com'
   - '+.2835177ccc.com'
   - '+.28493.com'
   - '+.2853x.com'
@@ -3104,7 +3104,6 @@ payload:
   - '+.3gu.com'
   - '+.3gus.com'
   - '+.3h3.com'
-  - '+.3hbox.com'
   - '+.3incloud.com'
   - '+.3j4.com'
   - '+.3jdh.com'
@@ -4982,7 +4981,6 @@ payload:
   - '+.6383.com'
   - '+.6392.spa'
   - '+.639311.com'
-  - '+.6399868.com'
   - '+.63diy.com'
   - '+.63pe.com'
   - '+.63qingyou.com'
@@ -5181,7 +5179,6 @@ payload:
   - '+.69.com'
   - '+.69005a.com'
   - '+.69260.com'
-  - '+.6928.info'
   - '+.6934.net'
   - '+.693836.com'
   - '+.693975.com'
@@ -5495,6 +5492,7 @@ payload:
   - '+.779wan.com'
   - '+.77acg.com'
   - '+.77bx.com'
+  - '+.77dd23.com'
   - '+.77ds.com'
   - '+.77dushu.com'
   - '+.77ebooks.com'
@@ -8996,7 +8994,6 @@ payload:
   - '+.aswetalk.net'
   - '+.asyzonline.com'
   - '+.aszvip.com'
-  - '+.at-siac.com'
   - '+.at0086.com'
   - '+.at0086.net'
   - '+.at58.com'
@@ -9805,7 +9802,6 @@ payload:
   - '+.baozugongkeji.com'
   - '+.baozy.com'
   - '+.baping.com'
-  - '+.baqima.com'
   - '+.baqiu.com'
   - '+.baquge.com'
   - '+.barmap.com'
@@ -11106,6 +11102,7 @@ payload:
   - '+.blingclubs.com'
   - '+.blissmall.net'
   - '+.blizzardcn.com'
+  - '+.blizztc.com'
   - '+.bljiancai.com'
   - '+.bln7.com'
   - '+.bln8.com'
@@ -11513,7 +11510,6 @@ payload:
   - '+.brzhang.club'
   - '+.bs-dolfin.net'
   - '+.bs008.com'
-  - '+.bs699.com'
   - '+.bsaxt.com'
   - '+.bsbchina.com'
   - '+.bsbydd.com'
@@ -11553,7 +11549,6 @@ payload:
   - '+.bsybx.com'
   - '+.bsyjrb.com'
   - '+.bsyxx.com'
-  - '+.bt113.com'
   - '+.bt6.club'
   - '+.bt66.tv'
   - '+.bt9527.com'
@@ -13529,7 +13524,6 @@ payload:
   - '+.chiluyingxiao.com'
   - '+.chimaoyoupin.com'
   - '+.chimatong.com'
-  - '+.chimee.org'
   - '+.chimelong.com'
   - '+.chimezi.com'
   - '+.china-10.com'
@@ -14079,7 +14073,6 @@ payload:
   - '+.chinasupercloud.com'
   - '+.chinasuperwool.com'
   - '+.chinaswim.com'
-  - '+.chinaswitch.com'
   - '+.chinasws.com'
   - '+.chinasydw.org'
   - '+.chinatai.com'
@@ -16323,7 +16316,6 @@ payload:
   - '+.csic76.com'
   - '+.csicmakers.com'
   - '+.csiea.net'
-  - '+.csj309.vip'
   - '+.csjcs.com'
   - '+.csjplatform.com'
   - '+.csjwang.com'
@@ -17394,7 +17386,6 @@ payload:
   - '+.dbshop.net'
   - '+.dbsltsd.com'
   - '+.dbt-coin.com'
-  - '+.dbyb.org'
   - '+.dbzgia.com'
   - '+.dc-cn.com'
   - '+.dc1103.com'
@@ -20611,7 +20602,6 @@ payload:
   - '+.ev123.com'
   - '+.ev123.net'
   - '+.ev3ds.com'
-  - '+.eva-game.com'
   - '+.eva001.com'
   - '+.evaad.com'
   - '+.evacg.co'
@@ -21291,6 +21281,7 @@ payload:
   - '+.fe-cable.com'
   - '+.fe2x.cc'
   - '+.fe520.com'
+  - '+.feadi.com'
   - '+.fearlazy.com'
   - '+.fecn.net'
   - '+.fecshop.com'
@@ -23657,7 +23648,6 @@ payload:
   - '+.gongkongedu.com'
   - '+.gongkongke.com'
   - '+.gongkongmall.com'
-  - '+.gonglin91.com'
   - '+.gongmutang.com'
   - '+.gongnou.com'
   - '+.gongpin.net'
@@ -24413,7 +24403,6 @@ payload:
   - '+.gxfengxiang.com'
   - '+.gxfin.com'
   - '+.gxfxwh.com'
-  - '+.gxganju.com'
   - '+.gxgkcat.com'
   - '+.gxglzj.com'
   - '+.gxgm.net'
@@ -25449,7 +25438,6 @@ payload:
   - '+.hbdangyang.com'
   - '+.hbddrn.com'
   - '+.hbdfdh.com'
-  - '+.hbdinuan.com'
   - '+.hbdmia.com'
   - '+.hbdtjqj.com'
   - '+.hbdx-kdyy.com'
@@ -27628,7 +27616,6 @@ payload:
   - '+.huihua365.com'
   - '+.huihuaren.com'
   - '+.huihuarensheng.com'
-  - '+.huiian.com'
   - '+.huiji.wiki'
   - '+.huijiame.com'
   - '+.huijiaoyun.com'
@@ -31000,7 +30987,6 @@ payload:
   - '+.jiaxiangxm.com'
   - '+.jiaxiao100.com'
   - '+.jiaxiaozhijia.com'
-  - '+.jiaxiaweilai.com'
   - '+.jiaxichina.net'
   - '+.jiaxin-industry.com'
   - '+.jiaxincloud.com'
@@ -33784,6 +33770,7 @@ payload:
   - '+.ksyuncs.com'
   - '+.ksyungslb.com'
   - '+.ksyunv5.com'
+  - '+.ksyunv7.com'
   - '+.ksyunwaf.com'
   - '+.ksyxmc.com'
   - '+.kszhuanjia.com'
@@ -34679,7 +34666,6 @@ payload:
   - '+.ld12366.com'
   - '+.ld246.com'
   - '+.ldbc.net'
-  - '+.ldcache.net'
   - '+.ldcang.com'
   - '+.ldd.me'
   - '+.lddengine.com'
@@ -36031,7 +36017,6 @@ payload:
   - '+.lol99.com'
   - '+.loldan.com'
   - '+.loldk.com'
-  - '+.loldytt.com'
   - '+.loldytt.org'
   - '+.loldytt.tv'
   - '+.lolgo.net'
@@ -36993,7 +36978,6 @@ payload:
   - '+.maintao.com'
   - '+.mainwww.com'
   - '+.maipu.com'
-  - '+.maiqixiong.com'
   - '+.mairoot.com'
   - '+.mairuan.com'
   - '+.maiscrm.com'
@@ -37623,8 +37607,6 @@ payload:
   - '+.meiqiausercontent.com'
   - '+.meiqinedu.com'
   - '+.meiqiu.me'
-  - '+.meiquankejib.com'
-  - '+.meiquankejih.com'
   - '+.meirenchong.com'
   - '+.meiritv.net'
   - '+.meiriyiwen.com'
@@ -38352,7 +38334,6 @@ payload:
   - '+.mkzoo.com'
   - '+.ml-kq.com'
   - '+.mlairport.com'
-  - '+.mlbuy.com'
   - '+.mlgj.com'
   - '+.mlibaba.com'
   - '+.mlinks.cc'
@@ -40554,7 +40535,6 @@ payload:
   - '+.nybai.com'
   - '+.nybaidu.net'
   - '+.nyckidsclub.com'
-  - '+.nym.tw'
   - '+.nync.com'
   - '+.nypd520.com'
   - '+.nyq.ink'
@@ -43670,6 +43650,7 @@ payload:
   - '+.qjfy.com'
   - '+.qjherb.com'
   - '+.qjhlw.com'
+  - '+.qjhm.com'
   - '+.qjimage.com'
   - '+.qjkc.net'
   - '+.qjmotor.com'
@@ -44755,7 +44736,6 @@ payload:
   - '+.rentiantech.com'
   - '+.rentixuewei.com'
   - '+.renwen.com'
-  - '+.renwole.com'
   - '+.renwuyi.com'
   - '+.renxueyanjiu.com'
   - '+.renyiwei.com'
@@ -50794,7 +50774,6 @@ payload:
   - '+.tianzhuo.com'
   - '+.tianzhuobj.com'
   - '+.tianziweb.net'
-  - '+.tianziyu.com'
   - '+.tianzongyouxi.com'
   - '+.tiao.pro'
   - '+.tiaodao.com'
@@ -50970,6 +50949,7 @@ payload:
   - '+.tiyep.com'
   - '+.tiyu21.com'
   - '+.tiyu68.com'
+  - '+.tiyucdn.com'
   - '+.tiyufeng.com'
   - '+.tiyule.com'
   - '+.tiyusaishi.com'
@@ -52124,7 +52104,6 @@ payload:
   - '+.txcdns.com'
   - '+.txcfgl.com'
   - '+.txdai.com'
-  - '+.txdy01.com'
   - '+.txdzs.com'
   - '+.txdzw.com'
   - '+.txfeiyu.com'
@@ -52177,7 +52156,6 @@ payload:
   - '+.tyc100.com'
   - '+.tychio.net'
   - '+.tychou.com'
-  - '+.tycits.com'
   - '+.tycqxs.com'
   - '+.tycredit.com'
   - '+.tydevice.com'
@@ -53317,7 +53295,6 @@ payload:
   - '+.vipjingdong.com'
   - '+.vipjr.com'
   - '+.vipkaoyan.net'
-  - '+.vipkdy.com'
   - '+.vipkid.com'
   - '+.vipkidresource.com'
   - '+.vipkidstatic.com'
@@ -53637,7 +53614,6 @@ payload:
   - '+.vvbtc.com'
   - '+.vvddcc.com'
   - '+.vvdeal.com'
-  - '+.vvdoit.com'
   - '+.vvebo.vip'
   - '+.vvfeng.com'
   - '+.vvfht.fun'
@@ -54240,7 +54216,6 @@ payload:
   - '+.web360.pw'
   - '+.web89.net'
   - '+.web930.com'
-  - '+.webacg.com'
   - '+.webank.com'
   - '+.webankcdn.net'
   - '+.webdissector.com'
@@ -54265,7 +54240,6 @@ payload:
   - '+.webond.net'
   - '+.weboss.hk'
   - '+.webpackjs.com'
-  - '+.webpiaoliang.com'
   - '+.webportal.cc'
   - '+.webpowerchina.com'
   - '+.webqxs.com'
@@ -57878,7 +57852,6 @@ payload:
   - '+.xiyousdk.com'
   - '+.xiyouwebgame.com'
   - '+.xiyow.com'
-  - '+.xiyuan.tv'
   - '+.xiyucosmetics.com'
   - '+.xiyuege.com'
   - '+.xiyufine.com'
@@ -58786,7 +58759,6 @@ payload:
   - '+.xyj.link'
   - '+.xyj321.com'
   - '+.xyjpzz.com'
-  - '+.xyjt.org'
   - '+.xykmovie.com'
   - '+.xylh888.com'
   - '+.xylink.com'
@@ -58890,7 +58862,6 @@ payload:
   - '+.xzrdwq.com'
   - '+.xzsec.com'
   - '+.xzsnw.com'
-  - '+.xzsoupu.com'
   - '+.xzstatic.com'
   - '+.xzsthj.com'
   - '+.xztzb.com'
@@ -60648,6 +60619,7 @@ payload:
   - '+.youxi.com'
   - '+.youxi01.com'
   - '+.youxi377.com'
+  - '+.youxi527.com'
   - '+.youxi528.com'
   - '+.youxi567.com'
   - '+.youxia.com'
@@ -62818,7 +62790,6 @@ payload:
   - '+.zhishuedu.com'
   - '+.zhishutang.com'
   - '+.zhisiyun.com'
-  - '+.zhisongip.com'
   - '+.zhitongcaijing.com'
   - '+.zhitoudsp.com'
   - '+.zhitouxing.com'
@@ -64147,7 +64118,6 @@ payload:
   - '+.zunxun.net'
   - '+.zuobaike.net'
   - '+.zuobin.net'
-  - '+.zuocd1.group'
   - '+.zuoche.com'
   - '+.zuocheng.net'
   - '+.zuodanye.com'
