--- a/directbak.yaml
+++ b/directbak.yaml
@@ -600,7 +600,6 @@ payload:
   - '+.0s8s.com'
   - '+.0sm.com'
   - '+.0uai.com'
-  - '+.0x0.biz'
   - '+.0x3.me'
   - '+.0x5.me'
   - '+.0x6.me'
@@ -2833,7 +2832,6 @@ payload:
   - '+.365essay.com'
   - '+.365f.com'
   - '+.365gangqin.com'
-  - '+.365haoshu.com'
   - '+.365heart.com'
   - '+.365htk.com'
   - '+.365huaer.com'
@@ -7535,6 +7533,7 @@ payload:
   - '+.aiba.com'
   - '+.aibaimm.com'
   - '+.aibang.com'
+  - '+.aibang.run'
   - '+.aibaov.com'
   - '+.aibe1e.cc'
   - '+.aibing.cc'
@@ -7790,7 +7789,6 @@ payload:
   - '+.aityp.com'
   - '+.aiufida.com'
   - '+.aiurl.com'
-  - '+.aiuw.com'
   - '+.aiuxdesign.com'
   - '+.aiuxian.com'
   - '+.aiuxstudio.com'
@@ -8897,7 +8895,6 @@ payload:
   - '+.arvinhk.com'
   - '+.aryasec.com'
   - '+.as-doll.com'
-  - '+.as-exchange.com'
   - '+.as-hitech.com'
   - '+.as3f.com'
   - '+.as5.com'
@@ -17265,7 +17262,6 @@ payload:
   - '+.davdian.com'
   - '+.davepellot.com'
   - '+.davidlovezoe.club'
-  - '+.daviespalace.com'
   - '+.davinfo.com'
   - '+.davtd.com'
   - '+.davvar.com'
@@ -17807,7 +17803,6 @@ payload:
   - '+.dgyejia.com'
   - '+.dgygpx.com'
   - '+.dgykz.com'
-  - '+.dgyldjy.com'
   - '+.dgyuanyi.com'
   - '+.dgzhihongjx.com'
   - '+.dgzhisen.com'
@@ -23096,7 +23091,6 @@ payload:
   - '+.gentags.com'
   - '+.gentags.net'
   - '+.genuway.com'
-  - '+.genymotion.net'
   - '+.genzhuang.org'
   - '+.geo-prism-cn.htcsense.com'
   - '+.geo-prism.htcsense.com'
@@ -26454,7 +26448,6 @@ payload:
   - '+.hldqjx.com'
   - '+.hldsjsjx.com'
   - '+.hlej.com'
-  - '+.hlfssh.com'
   - '+.hlgad.com'
   - '+.hlgdata.com'
   - '+.hlgnet.com'
@@ -26786,6 +26779,7 @@ payload:
   - '+.hongjingedu.com'
   - '+.hongjiu66.com'
   - '+.hongkang-life.com'
+  - '+.hongkongairlines.com'
   - '+.hongkongbluebag.hk'
   - '+.hongkou.net'
   - '+.hongku.com'
@@ -29643,7 +29637,6 @@ payload:
   - '+.ip-guard.net'
   - '+.ip008.com'
   - '+.ip138.com'
-  - '+.ip168.com'
   - '+.ip192.com'
   - '+.ip33.com'
   - '+.ip3366.net'
@@ -35236,7 +35229,6 @@ payload:
   - '+.lidakang.com'
   - '+.lidaoliang.com'
   - '+.lidazhuang.com'
-  - '+.lidazoghi.com'
   - '+.lidecloud.com'
   - '+.lidepower.com'
   - '+.lidetc.com'
@@ -36950,7 +36942,6 @@ payload:
   - '+.maienguoji.com'
   - '+.maifjb.com'
   - '+.maigoo.com'
-  - '+.maihanji.com'
   - '+.maihaoche.com'
   - '+.maihehd.com'
   - '+.maijia.com'
@@ -45281,6 +45272,7 @@ payload:
   - '+.runzi.cc'
   - '+.ruochu.com'
   - '+.ruofan.me'
+  - '+.ruohuo.net'
   - '+.ruokuai.com'
   - '+.ruoren.com'
   - '+.ruoshui.com'
@@ -55912,6 +55904,7 @@ payload:
   - '+.wubx.net'
   - '+.wucaiabc.com'
   - '+.wuchenxu.com'
+  - '+.wucuozi.com'
   - '+.wuczfj.com'
   - '+.wuda-website.com'
   - '+.wudage.com'
@@ -57277,6 +57270,7 @@ payload:
   - '+.xiaw.net'
   - '+.xiawan8.com'
   - '+.xiaxiab8.com'
+  - '+.xiaxs.info'
   - '+.xiaxs.la'
   - '+.xiayige.org'
   - '+.xiayiqu.com'
@@ -57678,7 +57672,6 @@ payload:
   - '+.xinxindai.com'
   - '+.xinxing.org'
   - '+.xinxing100.com'
-  - '+.xinxingjiaocheng.com'
   - '+.xinxingly.com'
   - '+.xinxinhot.net'
   - '+.xinxinjoy.com'
@@ -58563,6 +58556,7 @@ payload:
   - '+.xunsearch.com'
   - '+.xunshou.com'
   - '+.xunsl.com'
+  - '+.xuntongwuxian.com'
   - '+.xuntou.com'
   - '+.xuntuoguan.com'
   - '+.xunurl.com'
@@ -61910,7 +61904,6 @@ payload:
   - '+.zbluqian.com'
   - '+.zblzm.xyz'
   - '+.zbmeishu.com'
-  - '+.zbmx666.com'
   - '+.zbnews.net'
   - '+.zbopr.net'
   - '+.zbqlm.com'
@@ -62498,6 +62491,7 @@ payload:
   - '+.zhblawyer.com'
   - '+.zhblog.net'
   - '+.zhcf001.com'
+  - '+.zhckw.com'
   - '+.zhcw.com'
   - '+.zhdba.com'
   - '+.zhdgps.com'
@@ -63523,7 +63517,6 @@ payload:
   - '+.zjmrhpt.com'
   - '+.zjnad.com'
   - '+.zjnrcb.com'
-  - '+.zjnxxt.com'
   - '+.zjolcdn.com'
   - '+.zjoldns.com'
   - '+.zjpark.com'
