--- a/directbak.yaml
+++ b/directbak.yaml
@@ -841,7 +841,6 @@ payload:
   - '+.114desk.com'
   - '+.114dev.com'
   - '+.114dg.com'
-  - '+.114dhc.com'
   - '+.114dns.com'
   - '+.114dns.net'
   - '+.114god.com'
@@ -2371,7 +2370,6 @@ payload:
   - '+.2xiazai.com'
   - '+.2y9y.com'
   - '+.2yuanyy.com'
-  - '+.2yun.com'
   - '+.2yup.com'
   - '+.2zhk.com'
   - '+.2zimu.com'
@@ -2912,7 +2910,6 @@ payload:
   - '+.37168.com'
   - '+.371house.com'
   - '+.371love.com'
-  - '+.371zy.com'
   - '+.37201.com'
   - '+.3721ps.com'
   - '+.3722.com'
@@ -4977,7 +4974,6 @@ payload:
   - '+.636379.com'
   - '+.636935.com'
   - '+.6383.com'
-  - '+.6392.spa'
   - '+.639311.com'
   - '+.63diy.com'
   - '+.63pe.com'
@@ -5411,7 +5407,6 @@ payload:
   - '+.75271.com'
   - '+.75367.com'
   - '+.75510010.com'
-  - '+.75614.com'
   - '+.75625358935.com'
   - '+.756u.com'
   - '+.7574.com'
@@ -6645,7 +6640,6 @@ payload:
   - '+.9799.com'
   - '+.97add.com'
   - '+.97atc.com'
-  - '+.97douyin.com'
   - '+.97gg.net'
   - '+.97go.com'
   - '+.97jindianzi.com'
@@ -6812,7 +6806,6 @@ payload:
   - '+.99qimingzi.com'
   - '+.99qumingzi.com'
   - '+.99read.com'
-  - '+.99rom.com'
   - '+.99shou.com'
   - '+.99sky.com'
   - '+.99sun.com'
@@ -10462,7 +10455,6 @@ payload:
   - '+.bigda.com'
   - '+.bigdata-expo.org'
   - '+.bigdata.ren'
-  - '+.bigdataedu.org'
   - '+.bigdatasafe.org'
   - '+.bigdatastudy.net'
   - '+.bigdiao.cc'
@@ -13584,7 +13576,6 @@ payload:
   - '+.china-huaxue.com'
   - '+.china-huazhou.com'
   - '+.china-hzd.com'
-  - '+.china-insurance.com'
   - '+.china-invests.net'
   - '+.china-isotope.com'
   - '+.china-jm.org'
@@ -16637,7 +16628,6 @@ payload:
   - '+.cxy61.com'
   - '+.cxy7.com'
   - '+.cxyfjy.com'
-  - '+.cxyl.org'
   - '+.cxylfc.com'
   - '+.cxyob.com'
   - '+.cxytiandi.com'
@@ -17209,7 +17199,6 @@ payload:
   - '+.dashoucloud.com'
   - '+.dashuihua.com'
   - '+.dashuju123.com'
-  - '+.dashuye.com'
   - '+.dasoujia.com'
   - '+.dassm.com'
   - '+.dasung.com'
@@ -17382,7 +17371,6 @@ payload:
   - '+.dbshop.net'
   - '+.dbsltsd.com'
   - '+.dbt-coin.com'
-  - '+.dbzgia.com'
   - '+.dc-cn.com'
   - '+.dc1103.com'
   - '+.dcarapi.com'
@@ -18257,7 +18245,6 @@ payload:
   - '+.djstg.com'
   - '+.dju8.com'
   - '+.djwcp.com'
-  - '+.djyde.com'
   - '+.djye.com'
   - '+.djyjob.com'
   - '+.djysx.com'
@@ -21036,6 +21023,7 @@ payload:
   - '+.fangyunlin.com'
   - '+.fangzd.com'
   - '+.fangzhipeng.com'
+  - '+.fangzhouad.com'
   - '+.fangzhouzi.com'
   - '+.fangzongguan.com'
   - '+.fanhai-hk.com'
@@ -23445,6 +23433,7 @@ payload:
   - '+.glxlawyer.com'
   - '+.glzip.com'
   - '+.glzj88.com'
+  - '+.glztj.com'
   - '+.gm193.com'
   - '+.gm2007.com'
   - '+.gm825.com'
@@ -26673,7 +26662,6 @@ payload:
   - '+.hnyunji.com'
   - '+.hnyunzhiyi.com'
   - '+.hnyyss.com'
-  - '+.hnyzdc.com'
   - '+.hnzhaobiao.com'
   - '+.hnzhouyi.com'
   - '+.hnzhy.com'
@@ -27219,7 +27207,6 @@ payload:
   - '+.htwld.com'
   - '+.htx.cc'
   - '+.htxxpx.com'
-  - '+.htxyin.com'
   - '+.htyou.com'
   - '+.htys.cc'
   - '+.htyunwang.com'
@@ -27881,7 +27868,6 @@ payload:
   - '+.hust-snde.com'
   - '+.hust-wuxi.com'
   - '+.hust.cc'
-  - '+.hust.cx'
   - '+.hust.online'
   - '+.hustcad.com'
   - '+.hustduyan.com'
@@ -30283,7 +30269,6 @@ payload:
   - '+.iyouxun.com'
   - '+.iyruan.com'
   - '+.iytc.net'
-  - '+.iythf.com'
   - '+.iyuedan.com'
   - '+.iyuedian.com'
   - '+.iyunbao.com'
@@ -30327,7 +30312,6 @@ payload:
   - '+.izuchecdn.com'
   - '+.izuiyou.com'
   - '+.izumicn.com'
-  - '+.izzht.com'
   - '+.j-h-k.com'
   - '+.j-smu.com'
   - '+.j1health.com'
@@ -30608,7 +30592,6 @@ payload:
   - '+.jeffjade.com'
   - '+.jeffreyitstudio.com'
   - '+.jeffstudio.net'
-  - '+.jeffsvoice.com'
   - '+.jegms.com'
   - '+.jegotrip.com'
   - '+.jehudf.com'
@@ -35724,7 +35707,6 @@ payload:
   - '+.liuxuetown.com'
   - '+.liuxueyun.com'
   - '+.liuxx.com'
-  - '+.liuyanbaike.com'
   - '+.liuyang.com'
   - '+.liuyangfcw.com'
   - '+.liuyanzhao.com'
@@ -36237,6 +36219,7 @@ payload:
   - '+.loxpo.com'
   - '+.loxue.com'
   - '+.loyar.com'
+  - '+.loying.cc'
   - '+.loyo.cc'
   - '+.lpcheng.com'
   - '+.lpetl.com'
@@ -36732,6 +36715,7 @@ payload:
   - '+.lytning.xyz'
   - '+.lytoufang.com'
   - '+.lytpw.com'
+  - '+.lytq.com'
   - '+.lytuchuang10.com'
   - '+.lytuchuang12.com'
   - '+.lytuchuang13.com'
@@ -37411,7 +37395,6 @@ payload:
   - '+.mdbimg.com'
   - '+.mdckj.com'
   - '+.mdcui.com'
-  - '+.mdddy.com'
   - '+.mdeasydiagnosis.com'
   - '+.mdeditor.com'
   - '+.mdeer.com'
@@ -40473,7 +40456,6 @@ payload:
   - '+.nvloo.com'
   - '+.nvpuse.com'
   - '+.nvpuwo.com'
-  - '+.nvren55.com'
   - '+.nvsay.com'
   - '+.nvsheng.com'
   - '+.nvshengjie.com'
@@ -40560,7 +40542,6 @@ payload:
   - '+.o37o.net'
   - '+.o3ko.com'
   - '+.o3ndix.com'
-  - '+.o748.com'
   - '+.o7h.net'
   - '+.o8tv.com'
   - '+.oa025.com'
@@ -40980,7 +40961,6 @@ payload:
   - '+.openrice.com'
   - '+.opensoce.com'
   - '+.openthos.com'
-  - '+.openv.com'
   - '+.openvsm.com'
   - '+.openwbs.com'
   - '+.openwrt.pro'
@@ -44983,7 +44963,6 @@ payload:
   - '+.roncoo.com'
   - '+.rondygroup.com'
   - '+.rong-edge.com'
-  - '+.rong24.com'
   - '+.rong360.com'
   - '+.ronganjx.com'
   - '+.rongba.com'
@@ -48311,6 +48290,7 @@ payload:
   - '+.soqicrm.com'
   - '+.soquair.com'
   - '+.soripan.net'
+  - '+.soruncg.com'
   - '+.sos919.com'
   - '+.sosdx.com'
   - '+.sosg.net'
@@ -50796,6 +50776,7 @@ payload:
   - '+.ticstore.com'
   - '+.ticwear.com'
   - '+.tidb.io'
+  - '+.tide.fm'
   - '+.tideswing.fun'
   - '+.tidi.mobi'
   - '+.tiduyun.com'
@@ -51823,7 +51804,6 @@ payload:
   - '+.tuibear.com'
   - '+.tuibench.com'
   - '+.tuiberry.com'
-  - '+.tuibit.com'
   - '+.tuiclick.com'
   - '+.tuicoco.com'
   - '+.tuidaniu.com'
@@ -52058,7 +52038,6 @@ payload:
   - '+.tw2sm.com'
   - '+.tw93.fun'
   - '+.twanxi.com'
-  - '+.twapk.com'
   - '+.twcad.com'
   - '+.twcczhu.com'
   - '+.twd2.me'
@@ -53313,7 +53292,6 @@ payload:
   - '+.viptail.com'
   - '+.viptarena.com'
   - '+.viptijian.com'
-  - '+.vipvip.store'
   - '+.vipwhjtsgpc.com'
   - '+.vipwzswl.com'
   - '+.vipxap.com'
@@ -53864,6 +53842,7 @@ payload:
   - '+.wangguai.com'
   - '+.wanghaida.com'
   - '+.wanghualang.com'
+  - '+.wanghuinet.com'
   - '+.wanghz.com'
   - '+.wangid.com'
   - '+.wangjianshuo.com'
@@ -54090,7 +54069,6 @@ payload:
   - '+.wayboosz.com'
   - '+.wayhu.cc'
   - '+.wayhu8.com'
-  - '+.wayingyong.com'
   - '+.waynetechs.com'
   - '+.wayos.com'
   - '+.wayoulegal.com'
@@ -55519,6 +55497,7 @@ payload:
   - '+.wodingche.com'
   - '+.wodjob.com'
   - '+.wodocx.com'
+  - '+.wodown.com'
   - '+.wofang.com'
   - '+.wofangwang.com'
   - '+.wofficebox.com'
@@ -56655,6 +56634,7 @@ payload:
   - '+.xege.org'
   - '+.xegneils.com'
   - '+.xehedu.com'
+  - '+.xeknow.com'
   - '+.xeltek-cn.com'
   - '+.xelz.info'
   - '+.xen0n.name'
@@ -56829,7 +56809,6 @@ payload:
   - '+.xian-tourism.com'
   - '+.xianba.net'
   - '+.xianbai.me'
-  - '+.xianbaoyun.cc'
   - '+.xianbdj.com'
   - '+.xianbeikeji.com'
   - '+.xianbey.com'
@@ -57231,6 +57210,7 @@ payload:
   - '+.xiaoying.co'
   - '+.xiaoying.com'
   - '+.xiaoying.tv'
+  - '+.xiaoyisysreset.com'
   - '+.xiaoyouxi100.com'
   - '+.xiaoyouxiqun.com'
   - '+.xiaoyouzb.net'
@@ -58911,7 +58891,6 @@ payload:
   - '+.yakool.com'
   - '+.yalayi.net'
   - '+.yalewoo.com'
-  - '+.yaliang.net'
   - '+.yalishiyanji.com'
   - '+.yalixinli.com'
   - '+.yalongsi.com'
@@ -61314,7 +61293,6 @@ payload:
   - '+.yunpei.com'
   - '+.yunpian.com'
   - '+.yunpiao.net'
-  - '+.yunpigai.com'
   - '+.yunpp.com'
   - '+.yunqi.org'
   - '+.yunqi2050.com'
@@ -62758,6 +62736,7 @@ payload:
   - '+.zhiquanxia.com'
   - '+.zhiquapp.com'
   - '+.zhiquyuan.com'
+  - '+.zhiqwl.com'
   - '+.zhiread.com'
   - '+.zhiren.com'
   - '+.zhiren.ren'
@@ -64158,6 +64137,8 @@ payload:
   - '+.zupig.com'
   - '+.zupuk.com'
   - '+.zupulu.com'
+  - '+.zuqiuba.com'
+  - '+.zuqiuba.net'
   - '+.zutianke.com'
   - '+.zuulee.com'
   - '+.zuxcgames.com'
