--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3746,6 +3746,7 @@ payload:
   - '+.51huaya.com'
   - '+.51hunningtu.com'
   - '+.51hvac.com'
+  - '+.51hwe.com'
   - '+.51hwzy.com'
   - '+.51ias.com'
   - '+.51ibm.com'
@@ -4157,7 +4158,6 @@ payload:
   - '+.52aimo.com'
   - '+.52ali88.com'
   - '+.52alipay.com'
-  - '+.52alj.com'
   - '+.52analysis.com'
   - '+.52article.com'
   - '+.52asus.com'
@@ -4593,6 +4593,7 @@ payload:
   - '+.58baogao.com'
   - '+.58buy.com'
   - '+.58che.com'
+  - '+.58chxf.com'
   - '+.58cloud.com'
   - '+.58coin.com'
   - '+.58corp.com'
@@ -7518,6 +7519,7 @@ payload:
   - '+.aiagain.net'
   - '+.aiai6.com'
   - '+.aiaigu168.com'
+  - '+.aialbb.com'
   - '+.aiaor.com'
   - '+.aiba.com'
   - '+.aibaimm.com'
@@ -8577,6 +8579,7 @@ payload:
   - '+.apabi.com'
   - '+.apachecn.org'
   - '+.apad.pro'
+  - '+.apayun.com'
   - '+.apcdns.net'
   - '+.apclc.com'
   - '+.apcso.com'
@@ -21428,6 +21431,7 @@ payload:
   - '+.fengmaniu.com'
   - '+.fengmeng.net'
   - '+.fengmk2.com'
+  - '+.fengnayun.com'
   - '+.fengniao.com'
   - '+.fengniaohuanjing.com'
   - '+.fengniaojr.com'
@@ -22055,6 +22059,7 @@ payload:
   - '+.francissoung.com'
   - '+.francochinois.com'
   - '+.franzsandner.com'
+  - '+.fraproperty.com'
   - '+.frdic.com'
   - '+.fread.com'
   - '+.fredamd.com'
@@ -23407,6 +23412,7 @@ payload:
   - '+.globeimmi.com'
   - '+.globrand.net'
   - '+.glodon.com'
+  - '+.glofang.com'
   - '+.gloryre.com'
   - '+.gloryview.com'
   - '+.glorze.com'
@@ -23929,7 +23935,6 @@ payload:
   - '+.gsktraining.com'
   - '+.gskwai.com'
   - '+.gskyty.com'
-  - '+.gslb.net'
   - '+.gsmpers.com'
   - '+.gspaceteam.com'
   - '+.gsqstudio.com'
@@ -30002,7 +30007,6 @@ payload:
   - '+.itmastergame.com'
   - '+.itmind.net'
   - '+.itmoocs.com'
-  - '+.itmresources.com'
   - '+.itmsm.com'
   - '+.itmuch.com'
   - '+.itmuke.com'
@@ -31642,7 +31646,6 @@ payload:
   - '+.jjtonline.com'
   - '+.jjtravel.com'
   - '+.jjttjx.com'
-  - '+.jjvod.tv'
   - '+.jjw.com'
   - '+.jjwli.com'
   - '+.jjwxc.com'
@@ -31939,6 +31942,7 @@ payload:
   - '+.jpggod.com'
   - '+.jpghd.com'
   - '+.jphot.net'
+  - '+.jpivfw.com'
   - '+.jpjc315.com'
   - '+.jpkcnet.com'
   - '+.jpkix.com'
@@ -32077,6 +32081,7 @@ payload:
   - '+.jsharyjx.com'
   - '+.jshasl.com'
   - '+.jshbank.com'
+  - '+.jshdata.com'
   - '+.jshdwh.com'
   - '+.jshmrcb.com'
   - '+.jshnh.com'
@@ -32262,7 +32267,6 @@ payload:
   - '+.juhaokan.org'
   - '+.juhcloud.com'
   - '+.juhe.com'
-  - '+.juheng88.com'
   - '+.juheweb.com'
   - '+.juhome.net'
   - '+.juhuasuan.com'
@@ -34257,6 +34261,7 @@ payload:
   - '+.laiwo.com'
   - '+.laiwu.net'
   - '+.laiwumedia.com'
+  - '+.laixiu.cc'
   - '+.laixiukeji.com'
   - '+.laixueedu.com'
   - '+.laixuexi.cc'
@@ -34283,6 +34288,7 @@ payload:
   - '+.lambda.hk'
   - '+.lamiu.com'
   - '+.lamost.org'
+  - '+.lamoton.com'
   - '+.lampchina.net'
   - '+.lampouomo.com'
   - '+.lamyu.com'
@@ -34962,6 +34968,7 @@ payload:
   - '+.lexiangzuji.com'
   - '+.lexin.com'
   - '+.lexinchina.com'
+  - '+.lexpq.com'
   - '+.lexs9.com'
   - '+.lexue.com'
   - '+.lexue8.com'
@@ -34987,6 +34994,7 @@ payload:
   - '+.leyun001.com'
   - '+.leyungame.com'
   - '+.leyunge.com'
+  - '+.leyuxyz.com'
   - '+.leyuz.com'
   - '+.lezai.com'
   - '+.lezhi.com'
@@ -39453,6 +39461,10 @@ payload:
   - '+.nanputuo.com'
   - '+.nanqi.org'
   - '+.nanrentu.cc'
+  - '+.nanrenvip.cc'
+  - '+.nanrenvip02.cc'
+  - '+.nanrenvip03.cc'
+  - '+.nanrenvip04.cc'
   - '+.nanrenwa.com'
   - '+.nanshanski.com'
   - '+.nantaihu.com'
@@ -39719,6 +39731,7 @@ payload:
   - '+.neusncp.com'
   - '+.neusoft.com'
   - '+.neutrontek.com'
+  - '+.neux.studio'
   - '+.nev-battery.org'
   - '+.new-mobi.com'
   - '+.new-more.com'
@@ -41352,6 +41365,7 @@ payload:
   - '+.pamss.net'
   - '+.pan131.com'
   - '+.pan58.com'
+  - '+.pan666.net'
   - '+.pan8.net'
   - '+.panabit.com'
   - '+.panasonicmall.com'
@@ -41669,6 +41683,7 @@ payload:
   - '+.pearlinpalm.com'
   - '+.pearvideo.com'
   - '+.peasrch.com'
+  - '+.pec33.com'
   - '+.pechoin.com'
   - '+.pediy.com'
   - '+.pedli.com'
@@ -42073,6 +42088,7 @@ payload:
   - '+.piqs.com'
   - '+.piscesys.com'
   - '+.pisx.com'
+  - '+.pix73.com'
   - '+.pixelauth.com'
   - '+.pixhey.com'
   - '+.pixivacg.com'
@@ -42687,6 +42703,7 @@ payload:
   - '+.px0571.com'
   - '+.px5a.com'
   - '+.pxb7.com'
+  - '+.pxc33.com'
   - '+.pxcn168.com'
   - '+.pxdier.net'
   - '+.pxemba.com'
@@ -43505,6 +43522,7 @@ payload:
   - '+.qitian-tech.com'
   - '+.qitian.biz'
   - '+.qitiancom.com'
+  - '+.qitongxq.com'
   - '+.qitoon.com'
   - '+.qitxt.com'
   - '+.qiu-ai.com'
@@ -47900,7 +47918,6 @@ payload:
   - '+.smartfactory-expo.com'
   - '+.smartgaga.com'
   - '+.smartgeek.vip'
-  - '+.smartgslb.com'
   - '+.smarthey.com'
   - '+.smarthomecn.com'
   - '+.smartisan.com'
@@ -52828,6 +52845,7 @@ payload:
   - '+.uuns.com'
   - '+.uunt.com'
   - '+.uuoo.com'
+  - '+.uupages.com'
   - '+.uupaotui.com'
   - '+.uupee.com'
   - '+.uupei.com'
@@ -53678,6 +53696,7 @@ payload:
   - '+.wafcn.com'
   - '+.wafunny.com'
   - '+.wafzi.com'
+  - '+.waha.cc'
   - '+.waheaven.com'
   - '+.wahlap.com'
   - '+.wahongyu.com'
@@ -53697,6 +53716,7 @@ payload:
   - '+.waima.com'
   - '+.waimai.zone'
   - '+.waimai361.com'
+  - '+.waimaiwanjia.com'
   - '+.waimao6.com'
   - '+.waimaolangtz.com'
   - '+.waimaoribao.com'
@@ -61276,6 +61296,8 @@ payload:
   - '+.yunpan.com'
   - '+.yunpansou.cc'
   - '+.yunpanx.com'
+  - '+.yunpanziyuan.com'
+  - '+.yunpanziyuan.xyz'
   - '+.yunpei.com'
   - '+.yunpian.com'
   - '+.yunpiao.net'
@@ -63562,6 +63584,7 @@ payload:
   - '+.zkdt.net'
   - '+.zkecopro.com'
   - '+.zkeys.com'
+  - '+.zkf5.com'
   - '+.zkh.com'
   - '+.zkh360.com'
   - '+.zkhb.group'
