--- a/directbak.yaml
+++ b/directbak.yaml
@@ -13703,7 +13703,6 @@ payload:
   - '+.chinacamel.com'
   - '+.chinacampus.org'
   - '+.chinacarbide.com'
-  - '+.chinacartonmachinery.com'
   - '+.chinacasa.org'
   - '+.chinaccm.com'
   - '+.chinaccnet.com'
@@ -26258,13 +26257,13 @@ payload:
   - '+.hinabian.com'
   - '+.hinavi.net'
   - '+.hindlish.com'
-  - '+.hinew8.com'
   - '+.hinpy.com'
   - '+.hiopensource.com'
   - '+.hiosu.com'
   - '+.hioug.com'
   - '+.hiparking.com'
   - '+.hipcam.net'
+  - '+.hiphi.com'
   - '+.hiphop8.com'
   - '+.hipiao.com'
   - '+.hippoanimation.com'
@@ -32031,7 +32030,6 @@ payload:
   - '+.js11183.com'
   - '+.js118114.com'
   - '+.js165.com'
-  - '+.js178.com'
   - '+.js3.org'
   - '+.js3n.com'
   - '+.js7xc.com'
@@ -34058,7 +34056,6 @@ payload:
   - '+.kveww.com'
   - '+.kvexx.com'
   - '+.kvezz.com'
-  - '+.kvhee.com'
   - '+.kvhmm.com'
   - '+.kviso.com'
   - '+.kvkaa.com'
@@ -36833,7 +36830,6 @@ payload:
   - '+.machine35.com'
   - '+.machine365.com'
   - '+.machunjie.com'
-  - '+.macidea.com'
   - '+.macjb.com'
   - '+.mackentan.com'
   - '+.mackext.com'
@@ -39641,6 +39637,7 @@ payload:
   - '+.neeq.cc'
   - '+.neets.cc'
   - '+.neeu.com'
+  - '+.nefficient.co.kr'
   - '+.negroupedu.org'
   - '+.neigou.com'
   - '+.neihanshequ.com'
@@ -49805,7 +49802,6 @@ payload:
   - '+.taidu.com'
   - '+.taig.com'
   - '+.taigaoxiao.com'
-  - '+.taigongwl.com'
   - '+.taiguoyu.com'
   - '+.taihaikj.com'
   - '+.taihainet.com'
