--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3235,6 +3235,7 @@ payload:
   - '+.406yx.com'
   - '+.407wan.com'
   - '+.4080517.com'
+  - '+.4080so.com'
   - '+.409874.com'
   - '+.40fenzhong.com'
   - '+.40manhua.com'
@@ -4295,6 +4296,7 @@ payload:
   - '+.52tc.co'
   - '+.52tc.info'
   - '+.52tech.tech'
+  - '+.52tesla.com'
   - '+.52tgfc.com'
   - '+.52tian.net'
   - '+.52tiny.com'
@@ -4635,7 +4637,6 @@ payload:
   - '+.58xuexi.com'
   - '+.58yiji.com'
   - '+.58youtui.com'
-  - '+.58yuanlin.com'
   - '+.58yuesao.com'
   - '+.58zhuiju.com'
   - '+.59.com'
@@ -8527,7 +8528,6 @@ payload:
   - '+.aoliongame.com'
   - '+.aolylcd.com'
   - '+.aomeng.net'
-  - '+.aomygod.com'
   - '+.aomygodstatic.com'
   - '+.aonaotu.com'
   - '+.aoofu.com'
@@ -8696,6 +8696,7 @@ payload:
   - '+.applex.net'
   - '+.applicationloader.net'
   - '+.applinzi.com'
+  - '+.applogo.net'
   - '+.applysquare.com'
   - '+.applysquare.net'
   - '+.appmifile.com'
@@ -12728,6 +12729,7 @@ payload:
   - '+.cdnhwchcg02.com'
   - '+.cdnhwcibv122.com'
   - '+.cdnhwckfz116.com'
+  - '+.cdnhwclxu105.com'
   - '+.cdnhwcprh113.com'
   - '+.cdnhwctnm107.com'
   - '+.cdnhwczxh101.com'
@@ -16349,6 +16351,7 @@ payload:
   - '+.cssxt.com'
   - '+.cssyq.com'
   - '+.cssyzxx.com'
+  - '+.csszone.net'
   - '+.cstccloud.org'
   - '+.cstcloud.net'
   - '+.cstcq.com'
@@ -16815,6 +16818,7 @@ payload:
   - '+.d3cn.net'
   - '+.d3dweb.com'
   - '+.d3f.com'
+  - '+.d3games.com'
   - '+.d3iz9md.com'
   - '+.d3skg.com'
   - '+.d3tt.com'
@@ -23058,7 +23062,6 @@ payload:
   - '+.genetalks.com'
   - '+.geneworldcn.com'
   - '+.gengchuangz.com'
-  - '+.genghuiok.com'
   - '+.gengnie.com'
   - '+.gengzhongbang.com'
   - '+.genial.vip'
@@ -23647,6 +23650,7 @@ payload:
   - '+.gongyoumishu.com'
   - '+.gongzicp.com'
   - '+.gongzifu.com'
+  - '+.gongzuobaogao.xyz'
   - '+.gongzuoshouji.net'
   - '+.gongzuoyun.org'
   - '+.gonsun.com'
@@ -29465,6 +29469,7 @@ payload:
   - '+.inkonote.com'
   - '+.inktok.com'
   - '+.inkuai.com'
+  - '+.inkwai.com'
   - '+.inlaylink.com'
   - '+.inlishui.com'
   - '+.inlovektv.com'
@@ -38204,6 +38209,7 @@ payload:
   - '+.mishuhome.com'
   - '+.misiiyoo.com'
   - '+.miskcoo.com'
+  - '+.miso-lab.com'
   - '+.mispos.cc'
   - '+.missevan.com'
   - '+.missfresh.net'
@@ -40384,7 +40390,6 @@ payload:
   - '+.ntqfdq.com'
   - '+.ntrcb.com'
   - '+.nttui.com'
-  - '+.ntuiw.cc'
   - '+.ntuiw.com'
   - '+.ntvalumium.com'
   - '+.ntwikis.com'
@@ -44211,7 +44216,6 @@ payload:
   - '+.quyiyuan.com'
   - '+.quyouhui.net'
   - '+.quyu.net'
-  - '+.quyuansu.com'
   - '+.quyundong.com'
   - '+.quzhiwen.com'
   - '+.quzhuanxiang.com'
@@ -52446,6 +52450,7 @@ payload:
   - '+.uisnetwork.com'
   - '+.uisrc.com'
   - '+.uiste.com'
+  - '+.uitool.net'
   - '+.uiu.cc'
   - '+.uiusc.com'
   - '+.ujakn.com'
@@ -53939,6 +53944,7 @@ payload:
   - '+.wanlaiwang.com'
   - '+.wanlan.vip'
   - '+.wanli.com'
+  - '+.wanlicd.com'
   - '+.wanlitong.com'
   - '+.wanmei.com'
   - '+.wanmeilink.com'
@@ -54694,6 +54700,7 @@ payload:
   - '+.west.xyz'
   - '+.west263.com'
   - '+.west999.com'
+  - '+.westbund.art'
   - '+.westbund.com'
   - '+.westcits.com'
   - '+.weste.net'
@@ -56302,6 +56309,7 @@ payload:
   - '+.wzplc.com'
   - '+.wzpo.net'
   - '+.wzpod.com'
+  - '+.wzrdwl2.com'
   - '+.wzright.com'
   - '+.wzsee.com'
   - '+.wzsky.net'
@@ -57150,6 +57158,7 @@ payload:
   - '+.xiaoss.net'
   - '+.xiaot.com'
   - '+.xiaota.com'
+  - '+.xiaote.com'
   - '+.xiaote.net'
   - '+.xiaotee.com'
   - '+.xiaoten.com'
@@ -57661,7 +57670,6 @@ payload:
   - '+.xinyayk.com'
   - '+.xinyegang.com'
   - '+.xinyi-tech.com'
-  - '+.xinyifu.net'
   - '+.xinyisemi.com'
   - '+.xinyitt.com'
   - '+.xinyo100.com'
@@ -57929,6 +57937,7 @@ payload:
   - '+.xl5du.com'
   - '+.xl5dw.com'
   - '+.xl699.com'
+  - '+.xlaaa.com'
   - '+.xlbsoft.com'
   - '+.xlcfcyy.com'
   - '+.xlcidc.com'
@@ -57939,6 +57948,7 @@ payload:
   - '+.xlgtx.com'
   - '+.xlgxapp.com'
   - '+.xlhb.com'
+  - '+.xlhk.net'
   - '+.xlhs.com'
   - '+.xlhtcucc.com'
   - '+.xlinclass.com'
@@ -59481,6 +59491,7 @@ payload:
   - '+.yi114.com'
   - '+.yi6.com'
   - '+.yi7.com'
+  - '+.yi958.com'
   - '+.yiaini.com'
   - '+.yiapp.com'
   - '+.yibaifen.com'
@@ -61657,7 +61668,6 @@ payload:
   - '+.yywz123.com'
   - '+.yywzw.com'
   - '+.yyx168.com'
-  - '+.yyxscn.com'
   - '+.yyxt.com'
   - '+.yyxtao.com'
   - '+.yyxwzx.com'
@@ -62009,7 +62019,6 @@ payload:
   - '+.zejiri.net'
   - '+.zeju.com'
   - '+.zelinai.com'
-  - '+.zelininfo.com'
   - '+.zemismart.com'
   - '+.zemuo.com'
   - '+.zen-est.com'
@@ -63085,6 +63094,7 @@ payload:
   - '+.zhufengpeixun.com'
   - '+.zhufenqi.com'
   - '+.zhuge.com'
+  - '+.zhuge888.com'
   - '+.zhugeapi.com'
   - '+.zhugeapi.net'
   - '+.zhugefang.com'
